国家タグ関連コード自動追加

--- a/localisation/english/map/country_names/geacps_country_names_cosmetic_l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names_cosmetic_l_english.yml
@@ -86,9 +86,13 @@
  INNERMONGOLIA_peoples_republic_DEF: "the The Inner Mongolian People's Republic"
  INNERMONGOLIA_peoples_republic_ADJ: "Inner Mongolian"
  
- JRS-RDS-MLT: "Jerusalem-Rhodes-Malta"
- JRS-RDS-MLT_DEF: "Jerusalem-Rhodes-Malta"
- JRS-RDS-MLT_ADJ: "Jerusalem-Rhodian-Maltese"
+ JRSandRDSandMLT: "Jerusalem, Rhodes and Malta"
+ JRSandRDSandMLT_DEF: "Jerusalem, Rhodes and Malta"
+ JRSandRDSandMLT_ADJ: "Jerusalem, Rhodian and Maltese"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order: "Sovereign Military Hospitaller Order of Saint John of Jerusalem, Rhodes and Malta"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order_DEF: "the The Sovereign Military Hospitaller Order of Saint John of Jerusalem, Rhodes and Malta"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order_ADJ: "Jerusalem, Rhodian and Maltese"
+ 
  KAMPUCHEA: "Kampuchea"
  KAMPUCHEA_DEF: "Kampuchea"
  KAMPUCHEA_ADJ: "Kampuchean"
@@ -156,9 +160,13 @@
  MOUNTAINOUSARMENIA_republic_DEF: "the The Republic of Mountainous Armenia"
  MOUNTAINOUSARMENIA_republic_ADJ: "Mountainous Armenian"
  
- MSC-OMA: "Muscat-Oman"
- MSC-OMA_DEF: "Muscat-Oman"
- MSC-OMA_ADJ: "Muscatian-Omani"
+ MSCandOMA: "Muscat and Oman"
+ MSCandOMA_DEF: "Muscat and Oman"
+ MSCandOMA_ADJ: "Muscatian and Omani"
+ MSCandOMA_sultanate: "Sultanate of Muscat and Oman"
+ MSCandOMA_sultanate_DEF: "the The Sultanate of Muscat and Oman"
+ MSCandOMA_sultanate_ADJ: "Muscatian and Omani"
+ 
  MUGHAL: "Mughal"
  MUGHAL_DEF: "Mughal"
  MUGHAL_ADJ: "Mughal"
@@ -266,9 +274,9 @@
  ZHELTUGA_republic_ADJ: "Zheltuga "
  
 #ヨーロッパ
- AEG-ION: "Aegean-Ionian Islands"
- AEG-ION_DEF: "Aegean-Ionian Islands"
- AEG-ION_ADJ: "Aegean-Ionian"
+ AEGandION: "Aegean and Ionian Islands"
+ AEGandION_DEF: "Aegean and Ionian Islands"
+ AEGandION_ADJ: "Aegean and Ionian"
  BATAVIA: "Batavia"
  BATAVIA_DEF: "Batavia"
  BATAVIA_ADJ: "Batavian"
@@ -286,12 +294,29 @@
  BENELUX_united_kingdom_DEF: "the The United Kingdom of Benelux"
  BENELUX_united_kingdom_ADJ: "Benelux"
  
- BOH-MRV: "Bohemia-Moravia"
- BOH-MRV_DEF: "Bohemia-Moravia"
- BOH-MRV_ADJ: "Bohemian-Moravian"
- BOS-HRZ: "Bosnia-Herzegovina"
- BOS-HRZ_DEF: "Bosnia-Herzegovina"
- BOS-HRZ_ADJ: "Bosnian-Herzegovinian"
+ BOHandMRV: "Bohemia and Moravia"
+ BOHandMRV_DEF: "Bohemia and Moravia"
+ BOHandMRV_ADJ: "Bohemian and Moravian"
+ BOHandMRV_kingdom: "Kingdom of Bohemia and Moravia"
+ BOHandMRV_kingdom_DEF: "the The Kingdom of Bohemia and Moravia"
+ BOHandMRV_kingdom_ADJ: "Bohemian and Moravian"
+ BOHandMRV_republic: "Republic of Bohemia and Moravia"
+ BOHandMRV_republic_DEF: "the The Republic of Bohemia and Moravia"
+ BOHandMRV_republic_ADJ: "Bohemian and Moravian"
+ BOHandMRV_united_kingdom: "United Kingdom of Bohemia and Moravia"
+ BOHandMRV_united_kingdom_DEF: "the The United Kingdom of Bohemia and Moravia"
+ BOHandMRV_united_kingdom_ADJ: "Bohemian and Moravian"
+ 
+ BOSandHRZ: "Bosnia and Herzegovina"
+ BOSandHRZ_DEF: "Bosnia and Herzegovina"
+ BOSandHRZ_ADJ: "Bosnian and Herzegovinian"
+ BOSandHRZ_federal_state: "Federal State of Bosnia and Herzegovina"
+ BOSandHRZ_federal_state_DEF: "the The Federal State of Bosnia and Herzegovina"
+ BOSandHRZ_federal_state_ADJ: "Bosnian and Herzegovinian"
+ BOSandHRZ_southslab_kingdom: "Southslab Kingdom of Bosnia and Herzegovina"
+ BOSandHRZ_southslab_kingdom_DEF: "the The Southslab Kingdom of Bosnia and Herzegovina"
+ BOSandHRZ_southslab_kingdom_ADJ: "Bosnian and Herzegovinian"
+ 
  BYELORUSSIA: "Byelorussia"
  BYELORUSSIA_DEF: "Byelorussia"
  BYELORUSSIA_ADJ: "Byelorussian"
@@ -309,24 +334,32 @@
  CHE-ING_republic_DEF: "the The Republic of Chechnya-Ingushetia"
  CHE-ING_republic_ADJ: "Chechen-Ingush"
  
- CRL-SEM: "Courland-Semigallia"
- CRL-SEM_DEF: "Courland-Semigallia"
- CRL-SEM_ADJ: "Courlander-Semigallian"
- CRO-SLN: "Croatia-Slavonia"
- CRO-SLN_DEF: "Croatia-Slavonia"
- CRO-SLN_ADJ: "Croatian-Slavonian"
- CRO-SLN-DAL: "Croatia-Slavonia-Dalmatia"
- CRO-SLN-DAL_DEF: "Croatia-Slavonia-Dalmatia"
- CRO-SLN-DAL_ADJ: "Croatian-Slavonian-Dalmatian"
- CZE-SLO: "Czechia-Slovakia"
- CZE-SLO_DEF: "Czechia-Slovakia"
- CZE-SLO_ADJ: "Czech-Slovakian"
- CZE-SLO_republic: "Czech-Slovakian Republic"
- CZE-SLO_republic_DEF: "the The Czech-Slovakian Republic"
- CZE-SLO_republic_ADJ: "Czech-Slovakian"
- CZE-SLO_socialist_republic: "Czech-Slovakian Socialist Republic"
- CZE-SLO_socialist_republic_DEF: "the The Czech-Slovakian Socialist Republic"
- CZE-SLO_socialist_republic_ADJ: "Czech-Slovakian"
+ CRLandSEM: "Courland and Semigallia"
+ CRLandSEM_DEF: "Courland and Semigallia"
+ CRLandSEM_ADJ: "Courlander and Semigallian"
+ CRLandSEM_duchy: "Duchy of Courland and Semigallia"
+ CRLandSEM_duchy_DEF: "the The Duchy of Courland and Semigallia"
+ CRLandSEM_duchy_ADJ: "Courlander and Semigallian"
+ 
+ CROandSLN: "Croatia and Slavonia"
+ CROandSLN_DEF: "Croatia and Slavonia"
+ CROandSLN_ADJ: "Croatian and Slavonian"
+ CROandSLN_kingdom: "Kingdom of Croatia and Slavonia"
+ CROandSLN_kingdom_DEF: "the The Kingdom of Croatia and Slavonia"
+ CROandSLN_kingdom_ADJ: "Croatian and Slavonian"
+ CROandSLN_republic: "Republic of Croatia and Slavonia"
+ CROandSLN_republic_DEF: "the The Republic of Croatia and Slavonia"
+ CROandSLN_republic_ADJ: "Croatian and Slavonian"
+ 
+ CROandSLNandDAL: "Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_DEF: "Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_ADJ: "Croatian, Slavonian and Dalmatian"
+ CROandSLNandDAL_republic: "Republic of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_republic_DEF: "the The Republic of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_republic_ADJ: "Croatian, Slavonian and Dalmatian"
+ CROandSLNandDAL_triune_kingdom: "Triune Kingdom of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_triune_kingdom_DEF: "the The Triune Kingdom of Croatia, Slavonia and Dalmatia"
+ CROandSLNandDAL_triune_kingdom_ADJ: "Croatian, Slavonian and Dalmatian"
  
  CZE-SLO: "Czechia-Slovakia"
  CZE-SLO_DEF: "Czechia-Slovakia"
@@ -350,6 +383,16 @@
  CZECHSLOVAKIA_socialist_republic: "Czechslovak Socialist Republic"
  CZECHSLOVAKIA_socialist_republic_DEF: "the The Czechslovak Socialist Republic"
  CZECHSLOVAKIA_socialist_republic_ADJ: "Czechslovak"
+ 
+ CZEandSLO: "Czechia and Slovakia"
+ CZEandSLO_DEF: "Czechia and Slovakia"
+ CZEandSLO_ADJ: "Czech and Slovakian"
+ CZEandSLO_federative_republic: "Czech and Slovakian Federative Republic"
+ CZEandSLO_federative_republic_DEF: "the The Czech and Slovakian Federative Republic"
+ CZEandSLO_federative_republic_ADJ: "Czech and Slovakian"
+ CZEandSLO_socialist_federative_republic: "Czech and Slovakian Socialist Federative Republic"
+ CZEandSLO_socialist_federative_republic_DEF: "the The Czech and Slovakian Socialist Federative Republic"
+ CZEandSLO_socialist_federative_republic_ADJ: "Czech and Slovakian"
  
  DANUBE: "Danube"
  DANUBE_DEF: "Danube"
@@ -393,16 +436,20 @@
  ENG-WLS_commonwealth_DEF: "the The Commonwealth of England-Wales"
  ENG-WLS_commonwealth_ADJ: "English-Welsh"
  
- ENG-WLS: "England-Wales"
- ENG-WLS_DEF: "England-Wales"
- ENG-WLS_ADJ: "English-Welsh"
- ENG-WLS_commonwealth: "Commonwealth of England-Wales"
- ENG-WLS_commonwealth_DEF: "the The Commonwealth of England-Wales"
- ENG-WLS_commonwealth_ADJ: "English-Welsh"
+ ENGandWLS: "England and Wales"
+ ENGandWLS_DEF: "England and Wales"
+ ENGandWLS_ADJ: "English and Welsh"
+ ENGandWLS_kingdom: "Kingdom of England and Wales"
+ ENGandWLS_kingdom_DEF: "the The Kingdom of England and Wales"
+ ENGandWLS_kingdom_ADJ: "English and Welsh"
  
- EST-FIN: "Estonia-Finland"
- EST-FIN_DEF: "Estonia-Finland"
- EST-FIN_ADJ: "Estonian-Finn"
+ ESTandFIN: "Estonia and Finland"
+ ESTandFIN_DEF: "Estonia and Finland"
+ ESTandFIN_ADJ: "Estonian and Finn"
+ ESTandFIN_union: "Estonian and Finn Union"
+ ESTandFIN_union_DEF: "the The Estonian and Finn Union"
+ ESTandFIN_union_ADJ: "Estonian and Finn"
+ 
  FINNO-UGRIC: "Finno-Ugric"
  FINNO-UGRIC_DEF: "Finno-Ugric"
  FINNO-UGRIC_ADJ: "Finno-Ugric"
@@ -420,12 +467,20 @@
  FLN-WLL_republic_DEF: "the The Republic of Flanders-Wallonia"
  FLN-WLL_republic_ADJ: "Flemish-Walloon"
  
- FRA-SPA: "France-Spain"
- FRA-SPA_DEF: "France-Spain"
- FRA-SPA_ADJ: "French-Spanish"
- GAL-LOD: "Galicia-Lodomeria"
- GAL-LOD_DEF: "Galicia-Lodomeria"
- GAL-LOD_ADJ: "Galician-Lodomerian"
+ FRAandSPA: "France and Spain"
+ FRAandSPA_DEF: "France and Spain"
+ FRAandSPA_ADJ: "French and Spanish"
+ FRAandSPA_united_kingdom: "United Kingdom of France and Spain"
+ FRAandSPA_united_kingdom_DEF: "the The United Kingdom of France and Spain"
+ FRAandSPA_united_kingdom_ADJ: "French and Spanish"
+ 
+ GALandLOD: "Galicia and Lodomeria"
+ GALandLOD_DEF: "Galicia and Lodomeria"
+ GALandLOD_ADJ: "Galician and Lodomerian"
+ GALandLOD_kingdom: "Kingdom of Galicia and Lodomeria"
+ GALandLOD_kingdom_DEF: "the The Kingdom of Galicia and Lodomeria"
+ GALandLOD_kingdom_ADJ: "Galician and Lodomerian"
+ 
  GBR: "Great Britain"
  GBR_DEF: "Great Britain"
  GBR_ADJ: "British"
@@ -433,27 +488,41 @@
  GBR_republic_DEF: "the The Republic of Great Britain"
  GBR_republic_ADJ: "British"
  
- GBR-FRA: "Great Britain-France"
- GBR-FRA_DEF: "Great Britain-France"
- GBR-FRA_ADJ: "British-French"
- GBR-IRE: "Great Britain-Ireland"
- GBR-IRE_DEF: "Great Britain-Ireland"
- GBR-IRE_ADJ: "British"
- GBR-IREbyENG: "Great Britain-Ireland"
- GBR-IREbyENG_DEF: "Great Britain-Ireland"
- GBR-IREbyENG_ADJ: "British"
- GBR-IREbySCO: "Great Britain-Ireland"
- GBR-IREbySCO_DEF: "Great Britain-Ireland"
- GBR-IREbySCO_ADJ: "British"
- GBR-NIR: "Great Britain-Northern Ireland"
- GBR-NIR_DEF: "Great Britain-Northern Ireland"
- GBR-NIR_ADJ: "British"
- GBR-NIRbyENG: "Great Britain-Northern Ireland"
- GBR-NIRbyENG_DEF: "Great Britain-Northern Ireland"
- GBR-NIRbyENG_ADJ: "British"
- GBR-NIRbySCO: "Great Britain-Northern Ireland"
- GBR-NIRbySCO_DEF: "Great Britain-Northern Ireland"
- GBR-NIRbySCO_ADJ: "British"
+ GBRandFRA: "Great Britain and France"
+ GBRandFRA_DEF: "Great Britain and France"
+ GBRandFRA_ADJ: "British and French"
+ GBRandIRE: "Great Britain and Ireland"
+ GBRandIRE_DEF: "Great Britain and Ireland"
+ GBRandIRE_ADJ: "British"
+ GBRandIREbyENG: "Great Britain and Ireland"
+ GBRandIREbyENG_DEF: "Great Britain and Ireland"
+ GBRandIREbyENG_ADJ: "British"
+ GBRandIREbyENG_commonwealth: "Commonwealth of Great Britain and Ireland"
+ GBRandIREbyENG_commonwealth_DEF: "the The Commonwealth of Great Britain and Ireland"
+ GBRandIREbyENG_commonwealth_ADJ: "British"
+ GBRandIREbyENG_united_kingdom: "United Kingdom of Great Britain and Ireland"
+ GBRandIREbyENG_united_kingdom_DEF: "the The United Kingdom of Great Britain and Ireland"
+ GBRandIREbyENG_united_kingdom_ADJ: "British"
+ 
+ GBRandIREbySCO: "Great Britain and Ireland"
+ GBRandIREbySCO_DEF: "Great Britain and Ireland"
+ GBRandIREbySCO_ADJ: "British"
+ GBRandNIR: "Great Britain and Northern Ireland"
+ GBRandNIR_DEF: "Great Britain and Northern Ireland"
+ GBRandNIR_ADJ: "British"
+ GBRandNIRbyENG: "Great Britain and Northern Ireland"
+ GBRandNIRbyENG_DEF: "Great Britain and Northern Ireland"
+ GBRandNIRbyENG_ADJ: "British"
+ GBRandNIRbyENG_commonwealth: "Commonwealth of Great Britain and Northern Ireland"
+ GBRandNIRbyENG_commonwealth_DEF: "the The Commonwealth of Great Britain and Northe Thern Ireland"
+ GBRandNIRbyENG_commonwealth_ADJ: "British"
+ GBRandNIRbyENG_united_kingdom: "United Kingdom of Great Britain and Northern Ireland"
+ GBRandNIRbyENG_united_kingdom_DEF: "the The United Kingdom of Great Britain and Northe Thern Ireland"
+ GBRandNIRbyENG_united_kingdom_ADJ: "British"
+ 
+ GBRandNIRbySCO: "Great Britain and Northern Ireland"
+ GBRandNIRbySCO_DEF: "Great Britain and Northern Ireland"
+ GBRandNIRbySCO_ADJ: "British"
  GBRbyENG: "Great Britain"
  GBRbyENG_DEF: "Great Britain"
  GBRbyENG_ADJ: "British"
@@ -598,12 +667,20 @@
  IBEbySPA_united_kingdom_DEF: "the The United Kingdom of Iberia"
  IBEbySPA_united_kingdom_ADJ: "Iberian"
  
- IRE-GBR: "Ireland-Great Britain"
- IRE-GBR_DEF: "Ireland-Great Britain"
- IRE-GBR_ADJ: "Irish-British"
- IRE-SCO: "Ireland-Scotland"
- IRE-SCO_DEF: "Ireland-Scotland"
- IRE-SCO_ADJ: "Irish-Scottish"
+ IREandGBR: "Ireland and Great Britain"
+ IREandGBR_DEF: "Ireland and Great Britain"
+ IREandGBR_ADJ: "Irish and British"
+ IREandGBR_united_kingdom: "United Kingdom of Ireland and Great Britain"
+ IREandGBR_united_kingdom_DEF: "the The United Kingdom of Ireland and Great Britain"
+ IREandGBR_united_kingdom_ADJ: "Irish and British"
+ 
+ IREandSCO: "Ireland and Scotland"
+ IREandSCO_DEF: "Ireland and Scotland"
+ IREandSCO_ADJ: "Irish and Scottish"
+ IREandSCO_union: "Union of Ireland and Scotland"
+ IREandSCO_union_DEF: "the The Union of Ireland and Scotland"
+ IREandSCO_union_ADJ: "Irish and Scottish"
+ 
  ITA: "Italy"
  ITA_DEF: "Italy"
  ITA_ADJ: "Italian"
@@ -682,9 +759,13 @@
  LEMKO-RUSYN_republic_DEF: "the The Republic of Lemko-Rusyn"
  LEMKO-RUSYN_republic_ADJ: "Lemko-Rusyn"
  
- LIE-ALS: "Liechtenstein-Alaska"
- LIE-ALS_DEF: "Liechtenstein-Alaska"
- LIE-ALS_ADJ: "Liechtensteiner-Alaskan"
+ LIEandALS: "Liechtenstein and Alaska"
+ LIEandALS_DEF: "Liechtenstein and Alaska"
+ LIEandALS_ADJ: "Liechtensteiner and Alaskan"
+ LIEandALS_united_principality: "United Principality of Liechtenstein and Alaska"
+ LIEandALS_united_principality_DEF: "the The United Principality of Liechtenstein and Alaska"
+ LIEandALS_united_principality_ADJ: "Liechtensteiner and Alaskan"
+ 
  MAKHNOVSHCHINA: "Makhnovshchina"
  MAKHNOVSHCHINA_DEF: "Makhnovshchina"
  MAKHNOVSHCHINA_ADJ: "Makhnovshchinan"
@@ -728,15 +809,23 @@
  NOVOROSSIYA_peoples_republics_union_DEF: "the The Union of Novorossiya People's Republics"
  NOVOROSSIYA_peoples_republics_union_ADJ: "Novorossiya"
  
- POR-BRA: "Portugal-Brazil"
- POR-BRA_DEF: "Portugal-Brazil"
- POR-BRA_ADJ: "Portuguese-Brazilian"
+ PORandBRA: "Portugal and Brazil"
+ PORandBRA_DEF: "Portugal and Brazil"
+ PORandBRA_ADJ: "Portuguese and Brazilian"
+ PORandBRA_united_kingdom: "United Kingdom of Portugal and Brazil"
+ PORandBRA_united_kingdom_DEF: "the The United Kingdom of Portugal and Brazil"
+ PORandBRA_united_kingdom_ADJ: "Portuguese and Brazilian"
+ 
  RATE: "Räte"
  RATE_DEF: "Räte"
  RATE_ADJ: "Räte"
- RUS-BLR: "Russia-Belarus"
- RUS-BLR_DEF: "Russia-Belarus"
- RUS-BLR_ADJ: "Russian-Belarusian"
+ RUSandBLR: "Russia and Belarus"
+ RUSandBLR_DEF: "Russia and Belarus"
+ RUSandBLR_ADJ: "Russian and Belarusian"
+ RUSandBLR_union_state: "Union State of Russia and Belarus"
+ RUSandBLR_union_state_DEF: "the The Union State of Russia and Belarus"
+ RUSandBLR_union_state_ADJ: "Russian and Belarusian"
+ 
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN: "Holy Hungarian Crown of Saint Stephen"
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN_DEF: "Holy Hungarian Crown of Saint Stephen"
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN_ADJ: "Hungarian"
@@ -751,15 +840,27 @@
  SAINT.WENCESLAS.HOLY.BOHEMIAN.CROWN_lands_DEF: "the The Lands of the The Holy Bohemian Crown of Saint Wenceslas"
  SAINT.WENCESLAS.HOLY.BOHEMIAN.CROWN_lands_ADJ: "Bohemian"
  
- SER-MNT: "Serbia-Montenegro"
- SER-MNT_DEF: "Serbia-Montenegro"
- SER-MNT_ADJ: "Serbian-Montenegrin"
- SHL-HLS: "Schleswig-Holstein"
- SHL-HLS_DEF: "Schleswig-Holstein"
- SHL-HLS_ADJ: "Schleswig-Holsteinian"
- SWE-NOR: "Sweden-Norway"
- SWE-NOR_DEF: "Sweden-Norway"
- SWE-NOR_ADJ: "Swedish-Norwegian"
+ SERandMNT: "Serbia and Montenegro"
+ SERandMNT_DEF: "Serbia and Montenegro"
+ SERandMNT_ADJ: "Serbian and Montenegrin"
+ SERandMNT_southslab_kingdom: "Southslab Kingdom of Serbia and Montenegro"
+ SERandMNT_southslab_kingdom_DEF: "the The Southslab Kingdom of Serbia and Montenegro"
+ SERandMNT_southslab_kingdom_ADJ: "Serbian and Montenegrin"
+ 
+ SHLandHLS: "Schleswig and Holstein"
+ SHLandHLS_DEF: "Schleswig and Holstein"
+ SHLandHLS_ADJ: "Schleswig and Holsteinian"
+ SHLandHLS_united_duchy: "United Duchy of Schleswig and Holstein"
+ SHLandHLS_united_duchy_DEF: "the The United Duchy of Schleswig and Holstein"
+ SHLandHLS_united_duchy_ADJ: "Schleswig and Holsteinian"
+ 
+ SWEandNOR: "Sweden and Norway"
+ SWEandNOR_DEF: "Sweden and Norway"
+ SWEandNOR_ADJ: "Swedish and Norwegian"
+ SWEandNOR_united_kingdom: "United Kingdom of Sweden and Norway"
+ SWEandNOR_united_kingdom_DEF: "the The United Kingdom of Sweden and Norway"
+ SWEandNOR_united_kingdom_ADJ: "Swedish and Norwegian"
+ 
  TANACS: "Tanács"
  TANACS_DEF: "Tanács"
  TANACS_ADJ: "Tanács"
@@ -805,15 +906,19 @@
  BURKINAFASO: "Burkina Faso"
  BURKINAFASO_DEF: "Burkina Faso"
  BURKINAFASO_ADJ: "Burkinese"
- ETH-ERI: "Ethiopia-Eritrea"
- ETH-ERI_DEF: "Ethiopia-Eritrea"
- ETH-ERI_ADJ: "Ethiopian-Eritrean"
  ETH-ISR: "Ethiopia-Israel"
  ETH-ISR_DEF: "Ethiopia-Israel"
  ETH-ISR_ADJ: "Ethiopian-Israeli"
  ETH-ISR_state: "State of Ethiopia-Israel"
  ETH-ISR_state_DEF: "the The State of Ethiopia-Israel"
  ETH-ISR_state_ADJ: "Ethiopian-Israeli"
+ 
+ ETHandERI: "Ethiopia and Eritrea"
+ ETHandERI_DEF: "Ethiopia and Eritrea"
+ ETHandERI_ADJ: "Ethiopian and Eritrean"
+ ETHandERI_federation: "Federation of Ethiopia and Eritrea"
+ ETHandERI_federation_DEF: "the The Federation of Ethiopia and Eritrea"
+ ETHandERI_federation_ADJ: "Ethiopian and Eritrean"
  
  GOLDCOASTNORTHERNTERRITORIES: "Gold Coast Northern Territories"
  GOLDCOASTNORTHERNTERRITORIES_DEF: "Gold Coast Northern Territories"
@@ -825,9 +930,13 @@
  SAHRAWI_arab_democratic_republic_DEF: "the The Sahrawi Arab Democratic Republic"
  SAHRAWI_arab_democratic_republic_ADJ: "Sahrawi"
  
- TAN-ZAN: "Tanganyika-Zanzibar"
- TAN-ZAN_DEF: "Tanganyika-Zanzibar"
- TAN-ZAN_ADJ: "Tanganyikan-Zanzibari"
+ TANandZAN: "Tanganyika and Zanzibar"
+ TANandZAN_DEF: "Tanganyika and Zanzibar"
+ TANandZAN_ADJ: "Tanganyikan and Zanzibari"
+ TANandZAN_united_republic: "United Republic of Tanganyika and Zanzibar"
+ TANandZAN_united_republic_DEF: "the The United Republic of Tanganyika and Zanzibar"
+ TANandZAN_united_republic_ADJ: "Tanganyikan and Zanzibari"
+ 
  TUNIS: "Tunis"
  TUNIS_DEF: "Tunis"
  TUNIS_ADJ: "Tunisian"
@@ -1241,9 +1350,13 @@
  SOUTHGREENLAND: "South Greenland"
  SOUTHGREENLAND_DEF: "South Greenland"
  SOUTHGREENLAND_ADJ: "South Greenlander"
- TRI-TOB: "Trinidad-Tobago"
- TRI-TOB_DEF: "Trinidad-Tobago"
- TRI-TOB_ADJ: "Trinidadian-Tobagonian"
+ TRIandTOB: "Trinidad and Tobago"
+ TRIandTOB_DEF: "Trinidad and Tobago"
+ TRIandTOB_ADJ: "Trinidadian and Tobagonian"
+ TRIandTOB_republic: "Republic of Trinidad and Tobago"
+ TRIandTOB_republic_DEF: "the The Republic of Trinidad and Tobago"
+ TRIandTOB_republic_ADJ: "Trinidadian and Tobagonian"
+ 
 #大洋州
  AOTEAROA: "Aotearoa"
  AOTEAROA_DEF: "Aotearoa"
@@ -1266,9 +1379,9 @@
  COOKISLANDS_federation_DEF: "the The Cook Islands Federation"
  COOKISLANDS_federation_ADJ: "Cook Islands"
  
- KIR-TVL: "Kiribati-Tuvalu"
- KIR-TVL_DEF: "Kiribati-Tuvalu"
- KIR-TVL_ADJ: "I-Kiribati-Tuvaluan"
+ KIRandTVL: "Kiribati and Tuvalu"
+ KIRandTVL_DEF: "Kiribati and Tuvalu"
+ KIRandTVL_ADJ: "I-Kiribati and Tuvaluan"
  RAROTONGA: "Rarotonga"
  RAROTONGA_DEF: "Rarotonga"
  RAROTONGA_ADJ: "Rarotongan"
@@ -1280,6 +1393,10 @@
 ##国家連合
 #アジア
 #ヨーロッパ
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy: "Kingdom of Galicia and Lodomeria with the Grand Duchy of Cracow and the Grand Duchy of Lithuania"
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy_DEF: "the Kingdom of Galicia and Lodomeria with the Grand Duchy of Cracow and the Grand Duchy of Lithuania"
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy_ADJ: "Kingdom of Galicia and Lodomeria with Grand Duchy of Cracow and Grand Duchy of Lithuania"
+ 
  POL_kingdom_and_LIT_grand_duchy: "Kingdom of Poland and the Grand Duchy of Lithuania"
  POL_kingdom_and_LIT_grand_duchy_DEF: "the Kingdom of Poland and the Grand Duchy of Lithuania"
  POL_kingdom_and_LIT_grand_duchy_ADJ: "Kingdom of Poland and Grand Duchy of Lithuania"
