--- a/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
@@ -4540,12 +4540,12 @@
  ZHELTUGA_CHI_autonomous_province_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
- AEG-ION_CHI_autonomous_military_clique: "Aegean-Ionian Clique"
- AEG-ION_CHI_autonomous_military_clique_DEF: "the The Aegean-Ionian Clique"
- AEG-ION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_CHI_autonomous_province: "Aegean-Ionian Province"
- AEG-ION_CHI_autonomous_province_DEF: "the The Aegean-Ionian Province"
- AEG-ION_CHI_autonomous_province_ADJ: "$OVERLORD$ Aegean-Ionian"
+ AEGandION_CHI_autonomous_military_clique: "Aegean and Ionian Clique"
+ AEGandION_CHI_autonomous_military_clique_DEF: "the The Aegean and Ionian Clique"
+ AEGandION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_CHI_autonomous_province: "Aegean and Ionian Province"
+ AEGandION_CHI_autonomous_province_DEF: "the The Aegean and Ionian Province"
+ AEGandION_CHI_autonomous_province_ADJ: "$OVERLORD$ Aegean and Ionian"
  
  BYELORUSSIA_CHI_autonomous_military_clique: "Byelorussian Clique"
  BYELORUSSIA_CHI_autonomous_military_clique_DEF: "the The Byelorussian Clique"
@@ -4561,12 +4561,12 @@
  KAR-FIN_CHI_autonomous_province_DEF: "the The Karelo-Finnish Province"
  KAR-FIN_CHI_autonomous_province_ADJ: "$OVERLORD$ Karelo-Finnish"
  
- SHL-HLS_CHI_autonomous_military_clique: "Schleswig-Holsteinian Clique"
- SHL-HLS_CHI_autonomous_military_clique_DEF: "the The Schleswig-Holsteinian Clique"
- SHL-HLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_CHI_autonomous_province: "Schleswig-Holsteinian Province"
- SHL-HLS_CHI_autonomous_province_DEF: "the The Schleswig-Holsteinian Province"
- SHL-HLS_CHI_autonomous_province_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
+ SHLandHLS_CHI_autonomous_military_clique: "Schleswig and Holsteinian Clique"
+ SHLandHLS_CHI_autonomous_military_clique_DEF: "the The Schleswig and Holsteinian Clique"
+ SHLandHLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_CHI_autonomous_province: "Schleswig and Holsteinian Province"
+ SHLandHLS_CHI_autonomous_province_DEF: "the The Schleswig and Holsteinian Province"
+ SHLandHLS_CHI_autonomous_province_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_CHI_autonomous_military_clique: "Gold Coast Northern Territories Clique"
@@ -4593,12 +4593,12 @@
  
 #大洋州
  
- KIR-TVL_CHI_autonomous_military_clique: "I-Kiribati-Tuvaluan Clique"
- KIR-TVL_CHI_autonomous_military_clique_DEF: "the The I-Kiribati-Tuvaluan Clique"
- KIR-TVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_CHI_autonomous_province: "I-Kiribati-Tuvaluan Province"
- KIR-TVL_CHI_autonomous_province_DEF: "the The I-Kiribati-Tuvaluan Province"
- KIR-TVL_CHI_autonomous_province_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
+ KIRandTVL_CHI_autonomous_military_clique: "I-Kiribati and Tuvaluan Clique"
+ KIRandTVL_CHI_autonomous_military_clique_DEF: "the The I-Kiribati and Tuvaluan Clique"
+ KIRandTVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_CHI_autonomous_province: "I-Kiribati and Tuvaluan Province"
+ KIRandTVL_CHI_autonomous_province_DEF: "the The I-Kiribati and Tuvaluan Province"
+ KIRandTVL_CHI_autonomous_province_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
  
  
 #アメリカ諸州
