--- a/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
@@ -10354,21 +10354,21 @@
  ZHELTUGA_reichsland_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
- AEG-ION_reichsprotectorate: "Protektorat Aegean-Ionian Islands"
- AEG-ION_reichsprotectorate_DEF: "the The Protektorat Aegean-Ionian Islands"
- AEG-ION_reichsprotectorate_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_reichsgeneralgovernorate: "Generalgouvernement der Aegean-Ionian Islands"
- AEG-ION_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Aegean-Ionian Islands"
- AEG-ION_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_reichskommissariat: "Reichskommissariat Aegean-Ionian Islands"
- AEG-ION_reichskommissariat_DEF: "the The Reichskommissariat Aegean-Ionian Islands"
- AEG-ION_reichskommissariat_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_reichskolonie: "Reichskolonie Aegean-Ionian Islands"
- AEG-ION_reichskolonie_DEF: "the The Reichskolonie Aegean-Ionian Islands"
- AEG-ION_reichskolonie_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_reichsland: "Reichsland Aegean-Ionian Islands"
- AEG-ION_reichsland_DEF: "the The Reichsland Aegean-Ionian Islands"
- AEG-ION_reichsland_ADJ: "$OVERLORD$ Aegean-Ionian"
+ AEGandION_reichsprotectorate: "Protektorat Aegean and Ionian Islands"
+ AEGandION_reichsprotectorate_DEF: "the The Protektorat Aegean and Ionian Islands"
+ AEGandION_reichsprotectorate_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_reichsgeneralgovernorate: "Generalgouvernement der Aegean and Ionian Islands"
+ AEGandION_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Aegean and Ionian Islands"
+ AEGandION_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_reichskommissariat: "Reichskommissariat Aegean and Ionian Islands"
+ AEGandION_reichskommissariat_DEF: "the The Reichskommissariat Aegean and Ionian Islands"
+ AEGandION_reichskommissariat_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_reichskolonie: "Reichskolonie Aegean and Ionian Islands"
+ AEGandION_reichskolonie_DEF: "the The Reichskolonie Aegean and Ionian Islands"
+ AEGandION_reichskolonie_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_reichsland: "Reichsland Aegean and Ionian Islands"
+ AEGandION_reichsland_DEF: "the The Reichsland Aegean and Ionian Islands"
+ AEGandION_reichsland_ADJ: "$OVERLORD$ Aegean and Ionian"
  
  BYELORUSSIA_reichsprotectorate: "Protektorat Byelorussia"
  BYELORUSSIA_reichsprotectorate_DEF: "the The Protektorat Byelorussia"
@@ -10402,21 +10402,21 @@
  KAR-FIN_reichsland_DEF: "the The Reichsland Karelo-Finnish"
  KAR-FIN_reichsland_ADJ: "$OVERLORD$ Karelo-Finnish"
  
- SHL-HLS_reichsprotectorate: "Protektorat Schleswig-Holstein"
- SHL-HLS_reichsprotectorate_DEF: "the The Protektorat Schleswig-Holstein"
- SHL-HLS_reichsprotectorate_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_reichsgeneralgovernorate: "Generalgouvernement der Schleswig-Holstein"
- SHL-HLS_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Schleswig-Holstein"
- SHL-HLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_reichskommissariat: "Reichskommissariat Schleswig-Holstein"
- SHL-HLS_reichskommissariat_DEF: "the The Reichskommissariat Schleswig-Holstein"
- SHL-HLS_reichskommissariat_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_reichskolonie: "Reichskolonie Schleswig-Holstein"
- SHL-HLS_reichskolonie_DEF: "the The Reichskolonie Schleswig-Holstein"
- SHL-HLS_reichskolonie_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_reichsland: "Reichsland Schleswig-Holstein"
- SHL-HLS_reichsland_DEF: "the The Reichsland Schleswig-Holstein"
- SHL-HLS_reichsland_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
+ SHLandHLS_reichsprotectorate: "Protektorat Schleswig and Holstein"
+ SHLandHLS_reichsprotectorate_DEF: "the The Protektorat Schleswig and Holstein"
+ SHLandHLS_reichsprotectorate_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_reichsgeneralgovernorate: "Generalgouvernement der Schleswig and Holstein"
+ SHLandHLS_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Schleswig and Holstein"
+ SHLandHLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_reichskommissariat: "Reichskommissariat Schleswig and Holstein"
+ SHLandHLS_reichskommissariat_DEF: "the The Reichskommissariat Schleswig and Holstein"
+ SHLandHLS_reichskommissariat_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_reichskolonie: "Reichskolonie Schleswig and Holstein"
+ SHLandHLS_reichskolonie_DEF: "the The Reichskolonie Schleswig and Holstein"
+ SHLandHLS_reichskolonie_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_reichsland: "Reichsland Schleswig and Holstein"
+ SHLandHLS_reichsland_DEF: "the The Reichsland Schleswig and Holstein"
+ SHLandHLS_reichsland_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_reichsprotectorate: "Protektorat Gold Coast Northern Territories"
@@ -10470,21 +10470,21 @@
  
 #大洋州
  
- KIR-TVL_reichsprotectorate: "Protektorat Kiribati-Tuvalu"
- KIR-TVL_reichsprotectorate_DEF: "the The Protektorat Kiribati-Tuvalu"
- KIR-TVL_reichsprotectorate_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_reichsgeneralgovernorate: "Generalgouvernement der Kiribati-Tuvalu"
- KIR-TVL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Kiribati-Tuvalu"
- KIR-TVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_reichskommissariat: "Reichskommissariat Kiribati-Tuvalu"
- KIR-TVL_reichskommissariat_DEF: "the The Reichskommissariat Kiribati-Tuvalu"
- KIR-TVL_reichskommissariat_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_reichskolonie: "Reichskolonie Kiribati-Tuvalu"
- KIR-TVL_reichskolonie_DEF: "the The Reichskolonie Kiribati-Tuvalu"
- KIR-TVL_reichskolonie_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_reichsland: "Reichsland Kiribati-Tuvalu"
- KIR-TVL_reichsland_DEF: "the The Reichsland Kiribati-Tuvalu"
- KIR-TVL_reichsland_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
+ KIRandTVL_reichsprotectorate: "Protektorat Kiribati and Tuvalu"
+ KIRandTVL_reichsprotectorate_DEF: "the The Protektorat Kiribati and Tuvalu"
+ KIRandTVL_reichsprotectorate_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_reichsgeneralgovernorate: "Generalgouvernement der Kiribati and Tuvalu"
+ KIRandTVL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Kiribati and Tuvalu"
+ KIRandTVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_reichskommissariat: "Reichskommissariat Kiribati and Tuvalu"
+ KIRandTVL_reichskommissariat_DEF: "the The Reichskommissariat Kiribati and Tuvalu"
+ KIRandTVL_reichskommissariat_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_reichskolonie: "Reichskolonie Kiribati and Tuvalu"
+ KIRandTVL_reichskolonie_DEF: "the The Reichskolonie Kiribati and Tuvalu"
+ KIRandTVL_reichskolonie_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_reichsland: "Reichsland Kiribati and Tuvalu"
+ KIRandTVL_reichsland_DEF: "the The Reichsland Kiribati and Tuvalu"
+ KIRandTVL_reichsland_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
  
  
 #アメリカ諸州
