--- a/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
@@ -4546,12 +4546,12 @@
  ZHELTUGA_imperial_overseas_territory_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
- AEG-ION_imperial_constituent_state: "$OVERLORDADJ$ Aegean-Ionian State"
- AEG-ION_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Aegean-Ionian State"
- AEG-ION_imperial_constituent_state_ADJ: "$OVERLORD$ Aegean-Ionian"
- AEG-ION_imperial_overseas_territory: "$OVERLORDADJ$ Aegean-Ionian Islands"
- AEG-ION_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Aegean-Ionian Islands"
- AEG-ION_imperial_overseas_territory_ADJ: "$OVERLORD$ Aegean-Ionian"
+ AEGandION_imperial_constituent_state: "$OVERLORDADJ$ Aegean and Ionian State"
+ AEGandION_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Aegean and Ionian State"
+ AEGandION_imperial_constituent_state_ADJ: "$OVERLORD$ Aegean and Ionian"
+ AEGandION_imperial_overseas_territory: "$OVERLORDADJ$ Aegean and Ionian Islands"
+ AEGandION_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Aegean and Ionian Islands"
+ AEGandION_imperial_overseas_territory_ADJ: "$OVERLORD$ Aegean and Ionian"
  
  BYELORUSSIA_imperial_constituent_state: "$OVERLORDADJ$ Byelorussian State"
  BYELORUSSIA_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Byelorussian State"
@@ -4567,12 +4567,12 @@
  KAR-FIN_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Karelo-Finnish"
  KAR-FIN_imperial_overseas_territory_ADJ: "$OVERLORD$ Karelo-Finnish"
  
- SHL-HLS_imperial_constituent_state: "$OVERLORDADJ$ Schleswig-Holsteinian State"
- SHL-HLS_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Schleswig-Holsteinian State"
- SHL-HLS_imperial_constituent_state_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
- SHL-HLS_imperial_overseas_territory: "$OVERLORDADJ$ Schleswig-Holstein"
- SHL-HLS_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Schleswig-Holstein"
- SHL-HLS_imperial_overseas_territory_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
+ SHLandHLS_imperial_constituent_state: "$OVERLORDADJ$ Schleswig and Holsteinian State"
+ SHLandHLS_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Schleswig and Holsteinian State"
+ SHLandHLS_imperial_constituent_state_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
+ SHLandHLS_imperial_overseas_territory: "$OVERLORDADJ$ Schleswig and Holstein"
+ SHLandHLS_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Schleswig and Holstein"
+ SHLandHLS_imperial_overseas_territory_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_imperial_constituent_state: "$OVERLORDADJ$ Gold Coast Northern Territories State"
@@ -4602,12 +4602,12 @@
  COOKISLANDS_federation_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Cook Islands Federation"
  COOKISLANDS_federation_imperial_constituent_state_ADJ: "$OVERLORD$ Cook Islands"
  
- KIR-TVL_imperial_constituent_state: "$OVERLORDADJ$ I-Kiribati-Tuvaluan State"
- KIR-TVL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ I-Kiribati-Tuvaluan State"
- KIR-TVL_imperial_constituent_state_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
- KIR-TVL_imperial_overseas_territory: "$OVERLORDADJ$ Kiribati-Tuvalu"
- KIR-TVL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Kiribati-Tuvalu"
- KIR-TVL_imperial_overseas_territory_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
+ KIRandTVL_imperial_constituent_state: "$OVERLORDADJ$ I-Kiribati and Tuvaluan State"
+ KIRandTVL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ I-Kiribati and Tuvaluan State"
+ KIRandTVL_imperial_constituent_state_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
+ KIRandTVL_imperial_overseas_territory: "$OVERLORDADJ$ Kiribati and Tuvalu"
+ KIRandTVL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Kiribati and Tuvalu"
+ KIRandTVL_imperial_overseas_territory_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
  
  RAROTONGA_kingdom_imperial_constituent_state: "$OVERLORDADJ$ Kingdom of Rarotonga"
  RAROTONGA_kingdom_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Kingdom of Rarotonga"
