--- a/localisation/english/map/country_names/geacps_dependent_territory_names_SOV_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_SOV_l_english.yml
@@ -18589,33 +18589,33 @@
  ZHELTUGA_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Zheltuga  $OVERLORD$"
  
 #ヨーロッパ
- AEG-ION_SOV_constituent_republic: "Aegean-Ionian $OVERLORDADJ$ Republic"
- AEG-ION_SOV_constituent_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Republic"
- AEG-ION_SOV_constituent_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_SOV_constituent_federative_republic: "Aegean-Ionian $OVERLORDADJ$ Federative Republic"
- AEG-ION_SOV_constituent_federative_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Federative Republic"
- AEG-ION_SOV_constituent_federative_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_SOV_constituent_autonomous_republic: "Aegean-Ionian Autonomous $OVERLORDADJ$ Republic"
- AEG-ION_SOV_constituent_autonomous_republic_DEF: "the The Aegean-Ionian Autonomous $OVERLORDADJ$ Republic"
- AEG-ION_SOV_constituent_autonomous_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_republic: "Aegean-Ionian $OVERLORDADJ$ Socialist Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Socialist Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic: "Aegean-Ionian $OVERLORDADJ$ Socialist Federative Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Socialist Federative Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic: "Aegean-Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Aegean-Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_republic: "Aegean-Ionian $OVERLORDADJ$ Socialist Republic"
- AEG-ION_progressive_socialism_SOV_constituent_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Socialist Republic"
- AEG-ION_progressive_socialism_SOV_constituent_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic: "Aegean-Ionian $OVERLORDADJ$ Socialist Federative Republic"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Aegean-Ionian $OVERLORDADJ$ Socialist Federative Republic"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Aegean-Ionian $OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic: "Aegean-Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Aegean-Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Aegean-Ionian $OVERLORD$"
+ AEGandION_SOV_constituent_republic: "Aegean and Ionian $OVERLORDADJ$ Republic"
+ AEGandION_SOV_constituent_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Republic"
+ AEGandION_SOV_constituent_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_SOV_constituent_federative_republic: "Aegean and Ionian $OVERLORDADJ$ Federative Republic"
+ AEGandION_SOV_constituent_federative_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Federative Republic"
+ AEGandION_SOV_constituent_federative_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_SOV_constituent_autonomous_republic: "Aegean and Ionian Autonomous $OVERLORDADJ$ Republic"
+ AEGandION_SOV_constituent_autonomous_republic_DEF: "the The Aegean and Ionian Autonomous $OVERLORDADJ$ Republic"
+ AEGandION_SOV_constituent_autonomous_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_republic: "Aegean and Ionian $OVERLORDADJ$ Socialist Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Socialist Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic: "Aegean and Ionian $OVERLORDADJ$ Socialist Federative Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Socialist Federative Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic: "Aegean and Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Aegean and Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_republic: "Aegean and Ionian $OVERLORDADJ$ Socialist Republic"
+ AEGandION_progressive_socialism_SOV_constituent_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Socialist Republic"
+ AEGandION_progressive_socialism_SOV_constituent_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic: "Aegean and Ionian $OVERLORDADJ$ Socialist Federative Republic"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Aegean and Ionian $OVERLORDADJ$ Socialist Federative Republic"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Aegean and Ionian $OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic: "Aegean and Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Aegean and Ionian Autonomous $OVERLORDADJ$ Socialist Republic"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Aegean and Ionian $OVERLORD$"
  
  BYELORUSSIA_SOV_colony: "$OVERLORDADJ$ Colony of Byelorussia"
  BYELORUSSIA_SOV_colony_DEF: "the the The $OVERLORDADJ$ Colony of Byelorussia"
@@ -18811,33 +18811,33 @@
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the Karelo-Finnish Autonomous $OVERLORDADJ$ Socialist Republic"
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Karelo-Finnish $OVERLORD$"
  
- SHL-HLS_SOV_constituent_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Republic"
- SHL-HLS_SOV_constituent_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Republic"
- SHL-HLS_SOV_constituent_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_SOV_constituent_federative_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Federative Republic"
- SHL-HLS_SOV_constituent_federative_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Federative Republic"
- SHL-HLS_SOV_constituent_federative_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_SOV_constituent_autonomous_republic: "Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Republic"
- SHL-HLS_SOV_constituent_autonomous_republic_DEF: "the The Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Republic"
- SHL-HLS_SOV_constituent_autonomous_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic: "Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic: "Schleswig-Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Schleswig-Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic: "Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Schleswig-Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Schleswig-Holsteinian $OVERLORD$"
+ SHLandHLS_SOV_constituent_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Republic"
+ SHLandHLS_SOV_constituent_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Republic"
+ SHLandHLS_SOV_constituent_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_SOV_constituent_federative_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Federative Republic"
+ SHLandHLS_SOV_constituent_federative_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Federative Republic"
+ SHLandHLS_SOV_constituent_federative_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_SOV_constituent_autonomous_republic: "Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Republic"
+ SHLandHLS_SOV_constituent_autonomous_republic_DEF: "the The Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Republic"
+ SHLandHLS_SOV_constituent_autonomous_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic: "Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic: "Schleswig and Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The Schleswig and Holsteinian $OVERLORDADJ$ Socialist Federative Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic: "Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The Schleswig and Holsteinian Autonomous $OVERLORDADJ$ Socialist Republic"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "Schleswig and Holsteinian $OVERLORD$"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_SOV_constituent_republic: "Gold Coast Northern Territories $OVERLORDADJ$ Republic"
@@ -18927,33 +18927,33 @@
  
 #大洋州
  
- KIR-TVL_SOV_constituent_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Republic"
- KIR-TVL_SOV_constituent_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Republic"
- KIR-TVL_SOV_constituent_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_SOV_constituent_federative_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Federative Republic"
- KIR-TVL_SOV_constituent_federative_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Federative Republic"
- KIR-TVL_SOV_constituent_federative_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_SOV_constituent_autonomous_republic: "I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Republic"
- KIR-TVL_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Republic"
- KIR-TVL_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic: "I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic: "I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The I-Kiribati-Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic: "I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati-Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati-Tuvaluan $OVERLORD$"
+ KIRandTVL_SOV_constituent_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Republic"
+ KIRandTVL_SOV_constituent_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Republic"
+ KIRandTVL_SOV_constituent_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_SOV_constituent_federative_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Federative Republic"
+ KIRandTVL_SOV_constituent_federative_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Federative Republic"
+ KIRandTVL_SOV_constituent_federative_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_SOV_constituent_autonomous_republic: "I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Republic"
+ KIRandTVL_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Republic"
+ KIRandTVL_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic: "I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic: "I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_DEF: "the The I-Kiribati and Tuvaluan $OVERLORDADJ$ Socialist Federative Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic: "I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "the The I-Kiribati and Tuvaluan Autonomous $OVERLORDADJ$ Socialist Republic"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "I-Kiribati and Tuvaluan $OVERLORD$"
  
  
 #アメリカ諸州
