--- a/localisation/english/map/country_names/geacps_dependent_territory_names_USA_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_USA_l_english.yml
@@ -3861,11 +3861,11 @@
  TRANSCAUCS_USA_territory_DEF: "the The Territory of Transcaucasus"
  TRANSCAUCS_USA_territory_ADJ: "$OVERLORD$ TransCaucasian"
  
- TRANSJORDAN_emirate_USA_commonwealth: "Commonwealth of Emirate of Transjordan"
- TRANSJORDAN_emirate_USA_commonwealth_DEF: "the The Commonwealth of Emirate of Transjordan"
+ TRANSJORDAN_emirate_USA_commonwealth: "Emirate of Transjordan"
+ TRANSJORDAN_emirate_USA_commonwealth_DEF: "the The Emirate of Transjordan"
  
- TRANSJORDAN_hashemite_kingdom_USA_commonwealth: "Commonwealth of Hashemite Kingdom of Transjordan"
- TRANSJORDAN_hashemite_kingdom_USA_commonwealth_DEF: "the The Commonwealth of Hashemite Kingdom of Transjordan"
+ TRANSJORDAN_hashemite_kingdom_USA_commonwealth: "Hashemite Kingdom of Transjordan"
+ TRANSJORDAN_hashemite_kingdom_USA_commonwealth_DEF: "the The Hashemite Kingdom of Transjordan"
  
  UYGHURSTAN_USA_commonwealth: "Commonwealth of Uyghurstan"
  UYGHURSTAN_USA_commonwealth_DEF: "the The Commonwealth of Uyghurstan"
@@ -3898,11 +3898,11 @@
  ZHELTUGA_USA_territory_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
- AEG-ION_USA_commonwealth: "Commonwealth of Aegean-Ionian Islands"
- AEG-ION_USA_commonwealth_DEF: "the The Commonwealth of Aegean-Ionian Islands"
- AEG-ION_USA_territory: "Territory of Aegean-Ionian Islands"
- AEG-ION_USA_territory_DEF: "the The Territory of Aegean-Ionian Islands"
- AEG-ION_USA_territory_ADJ: "$OVERLORD$ Aegean-Ionian"
+ AEGandION_USA_commonwealth: "Commonwealth of Aegean and Ionian Islands"
+ AEGandION_USA_commonwealth_DEF: "the The Commonwealth of Aegean and Ionian Islands"
+ AEGandION_USA_territory: "Territory of Aegean and Ionian Islands"
+ AEGandION_USA_territory_DEF: "the The Territory of Aegean and Ionian Islands"
+ AEGandION_USA_territory_ADJ: "$OVERLORD$ Aegean and Ionian"
  
  BYELORUSSIA_USA_commonwealth: "Commonwealth of Byelorussia"
  BYELORUSSIA_USA_commonwealth_DEF: "the The Commonwealth of Byelorussia"
@@ -3916,11 +3916,11 @@
  KAR-FIN_USA_territory_DEF: "the The Territory of Karelo-Finnish"
  KAR-FIN_USA_territory_ADJ: "$OVERLORD$ Karelo-Finnish"
  
- SHL-HLS_USA_commonwealth: "Commonwealth of Schleswig-Holstein"
- SHL-HLS_USA_commonwealth_DEF: "the The Commonwealth of Schleswig-Holstein"
- SHL-HLS_USA_territory: "Territory of Schleswig-Holstein"
- SHL-HLS_USA_territory_DEF: "the The Territory of Schleswig-Holstein"
- SHL-HLS_USA_territory_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
+ SHLandHLS_USA_commonwealth: "Commonwealth of Schleswig and Holstein"
+ SHLandHLS_USA_commonwealth_DEF: "the The Commonwealth of Schleswig and Holstein"
+ SHLandHLS_USA_territory: "Territory of Schleswig and Holstein"
+ SHLandHLS_USA_territory_DEF: "the The Territory of Schleswig and Holstein"
+ SHLandHLS_USA_territory_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_USA_commonwealth: "Commonwealth of Gold Coast Northern Territories"
@@ -3943,17 +3943,17 @@
  SOUTHGREENLAND_USA_territory_ADJ: "$OVERLORD$ South Greenlander"
  
 #大洋州
- COOKISLANDS_federation_USA_commonwealth: "Commonwealth of Cook Islands Federation"
- COOKISLANDS_federation_USA_commonwealth_DEF: "the The Commonwealth of Cook Islands Federation"
+ COOKISLANDS_federation_USA_commonwealth: "Cook Islands Federation"
+ COOKISLANDS_federation_USA_commonwealth_DEF: "the The Cook Islands Federation"
  
- KIR-TVL_USA_commonwealth: "Commonwealth of Kiribati-Tuvalu"
- KIR-TVL_USA_commonwealth_DEF: "the The Commonwealth of Kiribati-Tuvalu"
- KIR-TVL_USA_territory: "Territory of Kiribati-Tuvalu"
- KIR-TVL_USA_territory_DEF: "the The Territory of Kiribati-Tuvalu"
- KIR-TVL_USA_territory_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
+ KIRandTVL_USA_commonwealth: "Commonwealth of Kiribati and Tuvalu"
+ KIRandTVL_USA_commonwealth_DEF: "the The Commonwealth of Kiribati and Tuvalu"
+ KIRandTVL_USA_territory: "Territory of Kiribati and Tuvalu"
+ KIRandTVL_USA_territory_DEF: "the The Territory of Kiribati and Tuvalu"
+ KIRandTVL_USA_territory_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
  
- RAROTONGA_kingdom_USA_commonwealth: "Commonwealth of Kingdom of Rarotonga"
- RAROTONGA_kingdom_USA_commonwealth_DEF: "the The Commonwealth of Kingdom of Rarotonga"
+ RAROTONGA_kingdom_USA_commonwealth: "Kingdom of Rarotonga"
+ RAROTONGA_kingdom_USA_commonwealth_DEF: "the The Kingdom of Rarotonga"
  
 #アメリカ諸州
 ##国家連合
