--- a/localisation/japanese/map/country_names/geacps_country_names_cosmetic_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_country_names_cosmetic_l_japanese.yml
@@ -86,9 +86,13 @@
  INNERMONGOLIA_peoples_republic_DEF: "内モンゴル人民共和国"
  INNERMONGOLIA_peoples_republic_ADJ: "内モンゴル"
  
- JRS-RDS-MLT: "エルサレム＝ロードス＝マルタ"
- JRS-RDS-MLT_DEF: "エルサレム＝ロードス＝マルタ"
- JRS-RDS-MLT_ADJ: "エルサレム＝ロードス＝マルタ"
+ JRSandRDSandMLT: "エルサレム、ロードス及びマルタ"
+ JRSandRDSandMLT_DEF: "エルサレム、ロードス及びマルタ"
+ JRSandRDSandMLT_ADJ: "エルサレム・ロードス・マルタ"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order: "エルサレム、ロードス及びマルタ聖ヨハネ主権軍事病院騎士修道会"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order_DEF: "エルサレム、ロードス及びマルタ聖ヨハネ主権軍事病院騎士修道会"
+ JRSandRDSandMLT_saint_john_sovereign_military_hospitaller_order_ADJ: "エルサレム・ロードス・マルタ"
+ 
  KAMPUCHEA: "カンプチア"
  KAMPUCHEA_DEF: "カンプチア"
  KAMPUCHEA_ADJ: "カンプチア"
@@ -156,9 +160,13 @@
  MOUNTAINOUSARMENIA_republic_DEF: "山岳アルメニア共和国"
  MOUNTAINOUSARMENIA_republic_ADJ: "山岳アルメニア"
  
- MSC-OMA: "マスカット＝オマーン"
- MSC-OMA_DEF: "マスカット＝オマーン"
- MSC-OMA_ADJ: "マスカット＝オマーン"
+ MSCandOMA: "マスカット及びオマーン"
+ MSCandOMA_DEF: "マスカット及びオマーン"
+ MSCandOMA_ADJ: "マスカット・オマーン"
+ MSCandOMA_sultanate: "マスカット及びオマーン・スルタン国"
+ MSCandOMA_sultanate_DEF: "マスカット及びオマーン・スルタン国"
+ MSCandOMA_sultanate_ADJ: "マスカット・オマーン"
+ 
  MUGHAL: "ムガル"
  MUGHAL_DEF: "ムガル"
  MUGHAL_ADJ: "ムガル"
@@ -266,9 +274,9 @@
  ZHELTUGA_republic_ADJ: "ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION: "エーゲ＝イオニア諸島"
- AEG-ION_DEF: "エーゲ＝イオニア諸島"
- AEG-ION_ADJ: "エーゲ＝イオニア諸島"
+ AEGandION: "エーゲ及びイオニア諸島"
+ AEGandION_DEF: "エーゲ及びイオニア諸島"
+ AEGandION_ADJ: "エーゲ・イオニア諸島"
  BATAVIA: "バタビア"
  BATAVIA_DEF: "バタビア"
  BATAVIA_ADJ: "バタビア"
@@ -286,12 +294,29 @@
  BENELUX_united_kingdom_DEF: "ベネルクス連合王国"
  BENELUX_united_kingdom_ADJ: "ベネルクス"
  
- BOH-MRV: "ボヘミア＝モラヴィア"
- BOH-MRV_DEF: "ボヘミア＝モラヴィア"
- BOH-MRV_ADJ: "ボヘミア＝モラヴィア"
- BOS-HRZ: "ボスニア＝ヘルツェゴビナ"
- BOS-HRZ_DEF: "ボスニア＝ヘルツェゴビナ"
- BOS-HRZ_ADJ: "ボスニア＝ヘルツェゴビナ"
+ BOHandMRV: "ボヘミア及びモラヴィア"
+ BOHandMRV_DEF: "ボヘミア及びモラヴィア"
+ BOHandMRV_ADJ: "ボヘミア・モラヴィア"
+ BOHandMRV_kingdom: "ボヘミア及びモラヴィア王国"
+ BOHandMRV_kingdom_DEF: "ボヘミア及びモラヴィア王国"
+ BOHandMRV_kingdom_ADJ: "ボヘミア・モラヴィア"
+ BOHandMRV_republic: "ボヘミア及びモラヴィア共和国"
+ BOHandMRV_republic_DEF: "ボヘミア及びモラヴィア共和国"
+ BOHandMRV_republic_ADJ: "ボヘミア・モラヴィア"
+ BOHandMRV_united_kingdom: "ボヘミア及びモラヴィア連合王国"
+ BOHandMRV_united_kingdom_DEF: "ボヘミア及びモラヴィア連合王国"
+ BOHandMRV_united_kingdom_ADJ: "ボヘミア・モラヴィア"
+ 
+ BOSandHRZ: "ボスニア及びヘルツェゴビナ"
+ BOSandHRZ_DEF: "ボスニア及びヘルツェゴビナ"
+ BOSandHRZ_ADJ: "ボスニア・ヘルツェゴビナ"
+ BOSandHRZ_federal_state: "ボスニア及びヘルツェゴビナ連邦国"
+ BOSandHRZ_federal_state_DEF: "ボスニア及びヘルツェゴビナ連邦国"
+ BOSandHRZ_federal_state_ADJ: "ボスニア・ヘルツェゴビナ"
+ BOSandHRZ_southslab_kingdom: "ボスニア及びヘルツェゴビナ南スラブ王国"
+ BOSandHRZ_southslab_kingdom_DEF: "ボスニア及びヘルツェゴビナ南スラブ王国"
+ BOSandHRZ_southslab_kingdom_ADJ: "ボスニア・ヘルツェゴビナ"
+ 
  BYELORUSSIA: "ベロロシア"
  BYELORUSSIA_DEF: "ベロロシア"
  BYELORUSSIA_ADJ: "ベロロシア"
@@ -309,24 +334,32 @@
  CHE-ING_republic_DEF: "チェチェン＝イングーシ共和国"
  CHE-ING_republic_ADJ: "チェチェン＝イングーシ"
  
- CRL-SEM: "クールラント＝ゼムガレン"
- CRL-SEM_DEF: "クールラント＝ゼムガレン"
- CRL-SEM_ADJ: "クールラント＝ゼムガレン"
- CRO-SLN: "クロアチア＝スラボニア"
- CRO-SLN_DEF: "クロアチア＝スラボニア"
- CRO-SLN_ADJ: "クロアチア＝スラボニア"
- CRO-SLN-DAL: "クロアチア＝スラボニア＝ダルマチア"
- CRO-SLN-DAL_DEF: "クロアチア＝スラボニア＝ダルマチア"
- CRO-SLN-DAL_ADJ: "クロアチア＝スラボニア＝ダルマチア"
- CZE-SLO: "チェコ＝スロバキア"
- CZE-SLO_DEF: "チェコ＝スロバキア"
- CZE-SLO_ADJ: "チェコ＝スロバキア"
- CZE-SLO_republic: "チェコ＝スロバキア共和国"
- CZE-SLO_republic_DEF: "チェコ＝スロバキア共和国"
- CZE-SLO_republic_ADJ: "チェコ＝スロバキア"
- CZE-SLO_socialist_republic: "チェコ＝スロバキア社会主義共和国"
- CZE-SLO_socialist_republic_DEF: "チェコ＝スロバキア社会主義共和国"
- CZE-SLO_socialist_republic_ADJ: "チェコ＝スロバキア"
+ CRLandSEM: "クールラント及びゼムガレン"
+ CRLandSEM_DEF: "クールラント及びゼムガレン"
+ CRLandSEM_ADJ: "クールラント・ゼムガレン"
+ CRLandSEM_duchy: "クールラント及びゼムガレン公国"
+ CRLandSEM_duchy_DEF: "クールラント及びゼムガレン公国"
+ CRLandSEM_duchy_ADJ: "クールラント・ゼムガレン"
+ 
+ CROandSLN: "クロアチア及びスラボニア"
+ CROandSLN_DEF: "クロアチア及びスラボニア"
+ CROandSLN_ADJ: "クロアチア・スラボニア"
+ CROandSLN_kingdom: "クロアチア及びスラボニア王国"
+ CROandSLN_kingdom_DEF: "クロアチア及びスラボニア王国"
+ CROandSLN_kingdom_ADJ: "クロアチア・スラボニア"
+ CROandSLN_republic: "クロアチア及びスラボニア共和国"
+ CROandSLN_republic_DEF: "クロアチア及びスラボニア共和国"
+ CROandSLN_republic_ADJ: "クロアチア・スラボニア"
+ 
+ CROandSLNandDAL: "クロアチア、スラボニア及びダルマチア"
+ CROandSLNandDAL_DEF: "クロアチア、スラボニア及びダルマチア"
+ CROandSLNandDAL_ADJ: "クロアチア・スラボニア・ダルマチア"
+ CROandSLNandDAL_republic: "クロアチア、スラボニア及びダルマチア共和国"
+ CROandSLNandDAL_republic_DEF: "クロアチア、スラボニア及びダルマチア共和国"
+ CROandSLNandDAL_republic_ADJ: "クロアチア・スラボニア・ダルマチア"
+ CROandSLNandDAL_triune_kingdom: "クロアチア、スラボニア及びダルマチア三位一体王国"
+ CROandSLNandDAL_triune_kingdom_DEF: "クロアチア、スラボニア及びダルマチア三位一体王国"
+ CROandSLNandDAL_triune_kingdom_ADJ: "クロアチア・スラボニア・ダルマチア"
  
  CZE-SLO: "チェコ＝スロバキア"
  CZE-SLO_DEF: "チェコ＝スロバキア"
@@ -350,6 +383,16 @@
  CZECHSLOVAKIA_socialist_republic: "チェコスロバキア社会主義共和国"
  CZECHSLOVAKIA_socialist_republic_DEF: "チェコスロバキア社会主義共和国"
  CZECHSLOVAKIA_socialist_republic_ADJ: "チェコスロバキア"
+ 
+ CZEandSLO: "チェコ及びスロバキア"
+ CZEandSLO_DEF: "チェコ及びスロバキア"
+ CZEandSLO_ADJ: "チェコ・スロバキア"
+ CZEandSLO_federative_republic: "チェコ及びスロバキア連邦共和国"
+ CZEandSLO_federative_republic_DEF: "チェコ及びスロバキア連邦共和国"
+ CZEandSLO_federative_republic_ADJ: "チェコ・スロバキア"
+ CZEandSLO_socialist_federative_republic: "チェコ及びスロバキア社会主義連邦共和国"
+ CZEandSLO_socialist_federative_republic_DEF: "チェコ及びスロバキア社会主義連邦共和国"
+ CZEandSLO_socialist_federative_republic_ADJ: "チェコ・スロバキア"
  
  DANUBE: "ドナウ"
  DANUBE_DEF: "ドナウ"
@@ -393,16 +436,20 @@
  ENG-WLS_commonwealth_DEF: "イングランド＝ウェールズ共和国"
  ENG-WLS_commonwealth_ADJ: "イングランド＝ウェールズ"
  
- ENG-WLS: "イングランド＝ウェールズ"
- ENG-WLS_DEF: "イングランド＝ウェールズ"
- ENG-WLS_ADJ: "イングランド＝ウェールズ"
- ENG-WLS_commonwealth: "イングランド＝ウェールズ共和国"
- ENG-WLS_commonwealth_DEF: "イングランド＝ウェールズ共和国"
- ENG-WLS_commonwealth_ADJ: "イングランド＝ウェールズ"
+ ENGandWLS: "イングランド及びウェールズ"
+ ENGandWLS_DEF: "イングランド及びウェールズ"
+ ENGandWLS_ADJ: "イングランド・ウェールズ"
+ ENGandWLS_kingdom: "イングランド及びウェールズ王国"
+ ENGandWLS_kingdom_DEF: "イングランド及びウェールズ王国"
+ ENGandWLS_kingdom_ADJ: "イングランド・ウェールズ"
  
- EST-FIN: "エストニア＝フィンランド"
- EST-FIN_DEF: "エストニア＝フィンランド"
- EST-FIN_ADJ: "エストニア＝フィンランド"
+ ESTandFIN: "エストニア及びフィンランド"
+ ESTandFIN_DEF: "エストニア及びフィンランド"
+ ESTandFIN_ADJ: "エストニア・フィンランド"
+ ESTandFIN_union: "エストニア及びフィンランド連合"
+ ESTandFIN_union_DEF: "エストニア及びフィンランド連合"
+ ESTandFIN_union_ADJ: "エストニア・フィンランド"
+ 
  FINNO-UGRIC: "フィン＝ウゴル"
  FINNO-UGRIC_DEF: "フィン＝ウゴル"
  FINNO-UGRIC_ADJ: "フィン＝ウゴル"
@@ -420,12 +467,20 @@
  FLN-WLL_republic_DEF: "フランドル＝ワロン共和国"
  FLN-WLL_republic_ADJ: "フランドル＝ワロン"
  
- FRA-SPA: "フランス＝スペイン"
- FRA-SPA_DEF: "フランス＝スペイン"
- FRA-SPA_ADJ: "フランス＝スペイン"
- GAL-LOD: "ガリツィア＝ロドメリア"
- GAL-LOD_DEF: "ガリツィア＝ロドメリア"
- GAL-LOD_ADJ: "ガリツィア＝ロドメリア"
+ FRAandSPA: "フランス及びスペイン"
+ FRAandSPA_DEF: "フランス及びスペイン"
+ FRAandSPA_ADJ: "フランス・スペイン"
+ FRAandSPA_united_kingdom: "フランス及びスペイン連合王国"
+ FRAandSPA_united_kingdom_DEF: "フランス及びスペイン連合王国"
+ FRAandSPA_united_kingdom_ADJ: "フランス・スペイン"
+ 
+ GALandLOD: "ガリツィア及びロドメリア"
+ GALandLOD_DEF: "ガリツィア及びロドメリア"
+ GALandLOD_ADJ: "ガリツィア・ロドメリア"
+ GALandLOD_kingdom: "ガリツィア及びロドメリア王国"
+ GALandLOD_kingdom_DEF: "ガリツィア及びロドメリア王国"
+ GALandLOD_kingdom_ADJ: "ガリツィア・ロドメリア"
+ 
  GBR: "グレートブリテン"
  GBR_DEF: "グレートブリテン"
  GBR_ADJ: "イギリス"
@@ -433,27 +488,41 @@
  GBR_republic_DEF: "グレートブリテン共和国"
  GBR_republic_ADJ: "イギリス"
  
- GBR-FRA: "グレートブリテン＝フランス"
- GBR-FRA_DEF: "グレートブリテン＝フランス"
- GBR-FRA_ADJ: "グレートブリテン＝フランス"
- GBR-IRE: "グレートブリテン＝アイルランド"
- GBR-IRE_DEF: "グレートブリテン＝アイルランド"
- GBR-IRE_ADJ: "イギリス"
- GBR-IREbyENG: "グレートブリテン＝アイルランド"
- GBR-IREbyENG_DEF: "グレートブリテン＝アイルランド"
- GBR-IREbyENG_ADJ: "イギリス"
- GBR-IREbySCO: "グレートブリテン＝アイルランド"
- GBR-IREbySCO_DEF: "グレートブリテン＝アイルランド"
- GBR-IREbySCO_ADJ: "イギリス"
- GBR-NIR: "グレートブリテン＝北アイルランド"
- GBR-NIR_DEF: "グレートブリテン＝北アイルランド"
- GBR-NIR_ADJ: "イギリス"
- GBR-NIRbyENG: "グレートブリテン＝北アイルランド"
- GBR-NIRbyENG_DEF: "グレートブリテン＝北アイルランド"
- GBR-NIRbyENG_ADJ: "イギリス"
- GBR-NIRbySCO: "グレートブリテン＝北アイルランド"
- GBR-NIRbySCO_DEF: "グレートブリテン＝北アイルランド"
- GBR-NIRbySCO_ADJ: "イギリス"
+ GBRandFRA: "グレートブリテン及びフランス"
+ GBRandFRA_DEF: "グレートブリテン及びフランス"
+ GBRandFRA_ADJ: "グレートブリテン・フランス"
+ GBRandIRE: "グレートブリテン及びアイルランド"
+ GBRandIRE_DEF: "グレートブリテン及びアイルランド"
+ GBRandIRE_ADJ: "イギリス"
+ GBRandIREbyENG: "グレートブリテン及びアイルランド"
+ GBRandIREbyENG_DEF: "グレートブリテン及びアイルランド"
+ GBRandIREbyENG_ADJ: "イギリス"
+ GBRandIREbyENG_commonwealth: "グレートブリテン及びアイルランド共和国"
+ GBRandIREbyENG_commonwealth_DEF: "グレートブリテン及びアイルランド共和国"
+ GBRandIREbyENG_commonwealth_ADJ: "イギリス"
+ GBRandIREbyENG_united_kingdom: "グレートブリテン及びアイルランド連合王国"
+ GBRandIREbyENG_united_kingdom_DEF: "グレートブリテン及びアイルランド連合王国"
+ GBRandIREbyENG_united_kingdom_ADJ: "イギリス"
+ 
+ GBRandIREbySCO: "グレートブリテン及びアイルランド"
+ GBRandIREbySCO_DEF: "グレートブリテン及びアイルランド"
+ GBRandIREbySCO_ADJ: "イギリス"
+ GBRandNIR: "グレートブリテン及び北アイルランド"
+ GBRandNIR_DEF: "グレートブリテン及び北アイルランド"
+ GBRandNIR_ADJ: "イギリス"
+ GBRandNIRbyENG: "グレートブリテン及び北アイルランド"
+ GBRandNIRbyENG_DEF: "グレートブリテン及び北アイルランド"
+ GBRandNIRbyENG_ADJ: "イギリス"
+ GBRandNIRbyENG_commonwealth: "グレートブリテン及び北アイルランド共和国"
+ GBRandNIRbyENG_commonwealth_DEF: "グレートブリテン及び北アイルランド共和国"
+ GBRandNIRbyENG_commonwealth_ADJ: "イギリス"
+ GBRandNIRbyENG_united_kingdom: "グレートブリテン及び北アイルランド連合王国"
+ GBRandNIRbyENG_united_kingdom_DEF: "グレートブリテン及び北アイルランド連合王国"
+ GBRandNIRbyENG_united_kingdom_ADJ: "イギリス"
+ 
+ GBRandNIRbySCO: "グレートブリテン及び北アイルランド"
+ GBRandNIRbySCO_DEF: "グレートブリテン及び北アイルランド"
+ GBRandNIRbySCO_ADJ: "イギリス"
  GBRbyENG: "グレートブリテン"
  GBRbyENG_DEF: "グレートブリテン"
  GBRbyENG_ADJ: "イギリス"
@@ -598,12 +667,20 @@
  IBEbySPA_united_kingdom_DEF: "イベリア連合王国"
  IBEbySPA_united_kingdom_ADJ: "イベリア"
  
- IRE-GBR: "アイルランド＝グレートブリテン"
- IRE-GBR_DEF: "アイルランド＝グレートブリテン"
- IRE-GBR_ADJ: "アイルランド＝グレートブリテン"
- IRE-SCO: "アイルランド＝スコットランド"
- IRE-SCO_DEF: "アイルランド＝スコットランド"
- IRE-SCO_ADJ: "アイルランド＝スコットランド"
+ IREandGBR: "アイルランド及びグレートブリテン"
+ IREandGBR_DEF: "アイルランド及びグレートブリテン"
+ IREandGBR_ADJ: "アイルランド・グレートブリテン"
+ IREandGBR_united_kingdom: "アイルランド及びグレートブリテン連合王国"
+ IREandGBR_united_kingdom_DEF: "アイルランド及びグレートブリテン連合王国"
+ IREandGBR_united_kingdom_ADJ: "アイルランド・グレートブリテン"
+ 
+ IREandSCO: "アイルランド及びスコットランド"
+ IREandSCO_DEF: "アイルランド及びスコットランド"
+ IREandSCO_ADJ: "アイルランド・スコットランド"
+ IREandSCO_union: "アイルランド及びスコットランド連合"
+ IREandSCO_union_DEF: "アイルランド及びスコットランド連合"
+ IREandSCO_union_ADJ: "アイルランド・スコットランド"
+ 
  ITA: "イタリア"
  ITA_DEF: "イタリア"
  ITA_ADJ: "イタリア"
@@ -682,9 +759,13 @@
  LEMKO-RUSYN_republic_DEF: "レムコ＝ルシン共和国"
  LEMKO-RUSYN_republic_ADJ: "レムコ＝ルシン"
  
- LIE-ALS: "リヒテンシュタイン＝アラスカ"
- LIE-ALS_DEF: "リヒテンシュタイン＝アラスカ"
- LIE-ALS_ADJ: "リヒテンシュタイン＝アラスカ"
+ LIEandALS: "リヒテンシュタイン及びアラスカ"
+ LIEandALS_DEF: "リヒテンシュタイン及びアラスカ"
+ LIEandALS_ADJ: "リヒテンシュタイン・アラスカ"
+ LIEandALS_united_principality: "リヒテンシュタイン及びアラスカ連合公国"
+ LIEandALS_united_principality_DEF: "リヒテンシュタイン及びアラスカ連合公国"
+ LIEandALS_united_principality_ADJ: "リヒテンシュタイン・アラスカ"
+ 
  MAKHNOVSHCHINA: "マフノフシチナ"
  MAKHNOVSHCHINA_DEF: "マフノフシチナ"
  MAKHNOVSHCHINA_ADJ: "マフノフシチナ"
@@ -728,15 +809,23 @@
  NOVOROSSIYA_peoples_republics_union_DEF: "ノヴォロシア人民共和国連邦"
  NOVOROSSIYA_peoples_republics_union_ADJ: "ノヴォロシア"
  
- POR-BRA: "ポルトガル＝ブラジル"
- POR-BRA_DEF: "ポルトガル＝ブラジル"
- POR-BRA_ADJ: "ポルトガル＝ブラジル"
+ PORandBRA: "ポルトガル及びブラジル"
+ PORandBRA_DEF: "ポルトガル及びブラジル"
+ PORandBRA_ADJ: "ポルトガル・ブラジル"
+ PORandBRA_united_kingdom: "ポルトガル及びブラジル連合王国"
+ PORandBRA_united_kingdom_DEF: "ポルトガル及びブラジル連合王国"
+ PORandBRA_united_kingdom_ADJ: "ポルトガル・ブラジル"
+ 
  RATE: "レーテ"
  RATE_DEF: "レーテ"
  RATE_ADJ: "レーテ"
- RUS-BLR: "ロシア＝ベラルーシ"
- RUS-BLR_DEF: "ロシア＝ベラルーシ"
- RUS-BLR_ADJ: "ロシア＝ベラルーシ"
+ RUSandBLR: "ロシア及びベラルーシ"
+ RUSandBLR_DEF: "ロシア及びベラルーシ"
+ RUSandBLR_ADJ: "ロシア・ベラルーシ"
+ RUSandBLR_union_state: "ロシア及びベラルーシ連合国"
+ RUSandBLR_union_state_DEF: "ロシア及びベラルーシ連合国"
+ RUSandBLR_union_state_ADJ: "ロシア・ベラルーシ"
+ 
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN: "聖イシュトヴァーンの神聖なるハンガリー王冠"
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN_DEF: "聖イシュトヴァーンの神聖なるハンガリー王冠"
  SAINT.STEPHEN.HOLY.HUNGARIAN.CROWN_ADJ: "ハンガリー"
@@ -751,15 +840,27 @@
  SAINT.WENCESLAS.HOLY.BOHEMIAN.CROWN_lands_DEF: "聖ヴァーツラフの神聖なるボヘミア王冠諸領邦"
  SAINT.WENCESLAS.HOLY.BOHEMIAN.CROWN_lands_ADJ: "ボヘミア"
  
- SER-MNT: "セルビア＝モンテネグロ"
- SER-MNT_DEF: "セルビア＝モンテネグロ"
- SER-MNT_ADJ: "セルビア＝モンテネグロ"
- SHL-HLS: "シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_DEF: "シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_ADJ: "シュレースヴィヒ＝ホルシュタイン"
- SWE-NOR: "スウェーデン＝ノルウェー"
- SWE-NOR_DEF: "スウェーデン＝ノルウェー"
- SWE-NOR_ADJ: "スウェーデン＝ノルウェー"
+ SERandMNT: "セルビア及びモンテネグロ"
+ SERandMNT_DEF: "セルビア及びモンテネグロ"
+ SERandMNT_ADJ: "セルビア・モンテネグロ"
+ SERandMNT_southslab_kingdom: "セルビア及びモンテネグロ南スラブ王国"
+ SERandMNT_southslab_kingdom_DEF: "セルビア及びモンテネグロ南スラブ王国"
+ SERandMNT_southslab_kingdom_ADJ: "セルビア・モンテネグロ"
+ 
+ SHLandHLS: "シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_DEF: "シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_ADJ: "シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_united_duchy: "シュレースヴィヒ及びホルシュタイン連合公国"
+ SHLandHLS_united_duchy_DEF: "シュレースヴィヒ及びホルシュタイン連合公国"
+ SHLandHLS_united_duchy_ADJ: "シュレースヴィヒ・ホルシュタイン"
+ 
+ SWEandNOR: "スウェーデン及びノルウェー"
+ SWEandNOR_DEF: "スウェーデン及びノルウェー"
+ SWEandNOR_ADJ: "スウェーデン・ノルウェー"
+ SWEandNOR_united_kingdom: "スウェーデン及びノルウェー連合王国"
+ SWEandNOR_united_kingdom_DEF: "スウェーデン及びノルウェー連合王国"
+ SWEandNOR_united_kingdom_ADJ: "スウェーデン・ノルウェー"
+ 
  TANACS: "タナーチ"
  TANACS_DEF: "タナーチ"
  TANACS_ADJ: "タナーチ"
@@ -805,15 +906,19 @@
  BURKINAFASO: "ブルキナファソ"
  BURKINAFASO_DEF: "ブルキナファソ"
  BURKINAFASO_ADJ: "ブルキナファソ"
- ETH-ERI: "エチオピア＝エリトリア"
- ETH-ERI_DEF: "エチオピア＝エリトリア"
- ETH-ERI_ADJ: "エチオピア＝エリトリア"
  ETH-ISR: "エチオピア＝イスラエル"
  ETH-ISR_DEF: "エチオピア＝イスラエル"
  ETH-ISR_ADJ: "エチオピア＝イスラエル"
  ETH-ISR_state: "エチオピア＝イスラエル国"
  ETH-ISR_state_DEF: "エチオピア＝イスラエル国"
  ETH-ISR_state_ADJ: "エチオピア＝イスラエル"
+ 
+ ETHandERI: "エチオピア及びエリトリア"
+ ETHandERI_DEF: "エチオピア及びエリトリア"
+ ETHandERI_ADJ: "エチオピア・エリトリア"
+ ETHandERI_federation: "エチオピア及びエリトリア連邦"
+ ETHandERI_federation_DEF: "エチオピア及びエリトリア連邦"
+ ETHandERI_federation_ADJ: "エチオピア・エリトリア"
  
  GOLDCOASTNORTHERNTERRITORIES: "ゴールド・コースト北部地域"
  GOLDCOASTNORTHERNTERRITORIES_DEF: "ゴールド・コースト北部地域"
@@ -825,9 +930,13 @@
  SAHRAWI_arab_democratic_republic_DEF: "サハラウィ・アラブ民主共和国"
  SAHRAWI_arab_democratic_republic_ADJ: "サハラウィ"
  
- TAN-ZAN: "タンガニーカ＝ザンジバル"
- TAN-ZAN_DEF: "タンガニーカ＝ザンジバル"
- TAN-ZAN_ADJ: "タンガニーカ＝ザンジバル"
+ TANandZAN: "タンガニーカ及びザンジバル"
+ TANandZAN_DEF: "タンガニーカ及びザンジバル"
+ TANandZAN_ADJ: "タンガニーカ・ザンジバル"
+ TANandZAN_united_republic: "タンガニーカ及びザンジバル連合共和国"
+ TANandZAN_united_republic_DEF: "タンガニーカ及びザンジバル連合共和国"
+ TANandZAN_united_republic_ADJ: "タンガニーカ・ザンジバル"
+ 
  TUNIS: "チュニス"
  TUNIS_DEF: "チュニス"
  TUNIS_ADJ: "チュニス"
@@ -1241,9 +1350,13 @@
  SOUTHGREENLAND: "南グリーンランド"
  SOUTHGREENLAND_DEF: "南グリーンランド"
  SOUTHGREENLAND_ADJ: "南グリーンランド"
- TRI-TOB: "トリニダード＝トバゴ"
- TRI-TOB_DEF: "トリニダード＝トバゴ"
- TRI-TOB_ADJ: "トリニダード＝トバゴ"
+ TRIandTOB: "トリニダード及びトバゴ"
+ TRIandTOB_DEF: "トリニダード及びトバゴ"
+ TRIandTOB_ADJ: "トリニダード・トバゴ"
+ TRIandTOB_republic: "トリニダード及びトバゴ共和国"
+ TRIandTOB_republic_DEF: "トリニダード及びトバゴ共和国"
+ TRIandTOB_republic_ADJ: "トリニダード・トバゴ"
+ 
 #大洋州
  AOTEAROA: "アオテアロア"
  AOTEAROA_DEF: "アオテアロア"
@@ -1266,9 +1379,9 @@
  COOKISLANDS_federation_DEF: "クック諸島連邦"
  COOKISLANDS_federation_ADJ: "クック諸島"
  
- KIR-TVL: "キリバス＝ツバル"
- KIR-TVL_DEF: "キリバス＝ツバル"
- KIR-TVL_ADJ: "キリバス＝ツバル"
+ KIRandTVL: "キリバス及びツバル"
+ KIRandTVL_DEF: "キリバス及びツバル"
+ KIRandTVL_ADJ: "キリバス・ツバル"
  RAROTONGA: "ラロトンガ"
  RAROTONGA_DEF: "ラロトンガ"
  RAROTONGA_ADJ: "ラロトンガ"
@@ -1280,6 +1393,10 @@
 ##国家連合
 #アジア
 #ヨーロッパ
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy: "ガリツィア及びロドメリア王国、それに付随するクラクフ大公国及びリトアニア大公国"
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy_DEF: "ガリツィア及びロドメリア王国、それに付随するクラクフ大公国及びリトアニア大公国"
+ GALandLOD_kingdom_with_CRW_grand_duchy_and_LIT_grand_duchy_ADJ: "ガリツィア・ロドメリア・クラクフ・リトアニア"
+ 
  POL_kingdom_and_LIT_grand_duchy: "ポーランド王国及びリトアニア大公国"
  POL_kingdom_and_LIT_grand_duchy_DEF: "ポーランド王国及びリトアニア大公国"
  POL_kingdom_and_LIT_grand_duchy_ADJ: "ポーランド・リトアニア"
