--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_1_l_japanese.yml
@@ -27967,48 +27967,48 @@
  ZHELTUGA_leased_territory_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION_colony: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地"
- AEG-ION_colony_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地"
- AEG-ION_colony_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_colonies_federation: "$OVERLORDADJ$領エーゲ＝イオニア諸島連邦植民地"
- AEG-ION_colonies_federation_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島連邦植民地"
- AEG-ION_colonies_federation_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_colony_and_protected_territory: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地及び保護領"
- AEG-ION_colony_and_protected_territory_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島植民地及び保護領"
- AEG-ION_colony_and_protected_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_condominium: "共同統治領エーゲ＝イオニア諸島"
- AEG-ION_condominium_DEF: "共同統治領エーゲ＝イオニア諸島"
- AEG-ION_condominium_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_overseas_territory: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_overseas_territory_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_overseas_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_viceroyalty: "エーゲ＝イオニア諸島副王領"
- AEG-ION_viceroyalty_DEF: "エーゲ＝イオニア諸島副王領"
- AEG-ION_viceroyalty_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_captaincy_general: "エーゲ＝イオニア諸島総督領"
- AEG-ION_captaincy_general_DEF: "エーゲ＝イオニア諸島総督領"
- AEG-ION_captaincy_general_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_protected_territory: "$OVERLORDADJ$保護領エーゲ＝イオニア諸島"
- AEG-ION_protected_territory_DEF: "$OVERLORDADJ$保護領エーゲ＝イオニア諸島"
- AEG-ION_protected_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_constituent_autonomous_province: "$OVERLORDADJ$領エーゲ＝イオニア諸島州"
- AEG-ION_constituent_autonomous_province_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島州"
- AEG-ION_constituent_autonomous_province_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_trust_territory: "$OVERLORDADJ$信託統治領エーゲ＝イオニア諸島"
- AEG-ION_trust_territory_DEF: "$OVERLORDADJ$信託統治領エーゲ＝イオニア諸島"
- AEG-ION_trust_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_A: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_A_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_B: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_B_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_C: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領エーゲ＝イオニア諸島"
- AEG-ION_mandated_territory_C_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_leased_territory: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_leased_territory_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_leased_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
+ AEGandION_colony: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地"
+ AEGandION_colony_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地"
+ AEGandION_colony_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_colonies_federation: "$OVERLORDADJ$領エーゲ及びイオニア諸島連邦植民地"
+ AEGandION_colonies_federation_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島連邦植民地"
+ AEGandION_colonies_federation_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_colony_and_protected_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地及び保護領"
+ AEGandION_colony_and_protected_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島植民地及び保護領"
+ AEGandION_colony_and_protected_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_condominium: "共同統治領エーゲ及びイオニア諸島"
+ AEGandION_condominium_DEF: "共同統治領エーゲ及びイオニア諸島"
+ AEGandION_condominium_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_overseas_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_overseas_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_overseas_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_viceroyalty: "エーゲ及びイオニア諸島副王領"
+ AEGandION_viceroyalty_DEF: "エーゲ及びイオニア諸島副王領"
+ AEGandION_viceroyalty_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_captaincy_general: "エーゲ及びイオニア諸島総督領"
+ AEGandION_captaincy_general_DEF: "エーゲ及びイオニア諸島総督領"
+ AEGandION_captaincy_general_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_protected_territory: "$OVERLORDADJ$保護領エーゲ及びイオニア諸島"
+ AEGandION_protected_territory_DEF: "$OVERLORDADJ$保護領エーゲ及びイオニア諸島"
+ AEGandION_protected_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_constituent_autonomous_province: "$OVERLORDADJ$領エーゲ及びイオニア諸島州"
+ AEGandION_constituent_autonomous_province_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島州"
+ AEGandION_constituent_autonomous_province_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_trust_territory: "$OVERLORDADJ$信託統治領エーゲ及びイオニア諸島"
+ AEGandION_trust_territory_DEF: "$OVERLORDADJ$信託統治領エーゲ及びイオニア諸島"
+ AEGandION_trust_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_mandated_territory_A: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_A_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_mandated_territory_B: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_B_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_mandated_territory_C: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領エーゲ及びイオニア諸島"
+ AEGandION_mandated_territory_C_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_leased_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_leased_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_leased_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
  
  BYELORUSSIA_colony: "$OVERLORDADJ$領ベロロシア植民地"
  BYELORUSSIA_colony_DEF: "$OVERLORDADJ$領ベロロシア植民地"
@@ -28096,48 +28096,48 @@
  KAR-FIN_leased_territory_DEF: "$OVERLORDADJ$領カレロ＝フィン"
  KAR-FIN_leased_territory_ADJ: "$OVERLORD$領カレロ＝フィン"
  
- SHL-HLS_colony: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地"
- SHL-HLS_colony_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地"
- SHL-HLS_colony_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_colonies_federation: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン連邦植民地"
- SHL-HLS_colonies_federation_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン連邦植民地"
- SHL-HLS_colonies_federation_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_colony_and_protected_territory: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地及び保護領"
- SHL-HLS_colony_and_protected_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン植民地及び保護領"
- SHL-HLS_colony_and_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_condominium: "共同統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_condominium_DEF: "共同統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_condominium_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_overseas_territory: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_overseas_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_overseas_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_viceroyalty: "シュレースヴィヒ＝ホルシュタイン副王領"
- SHL-HLS_viceroyalty_DEF: "シュレースヴィヒ＝ホルシュタイン副王領"
- SHL-HLS_viceroyalty_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_captaincy_general: "シュレースヴィヒ＝ホルシュタイン総督領"
- SHL-HLS_captaincy_general_DEF: "シュレースヴィヒ＝ホルシュタイン総督領"
- SHL-HLS_captaincy_general_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_protected_territory: "$OVERLORDADJ$保護領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_protected_territory_DEF: "$OVERLORDADJ$保護領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_constituent_autonomous_province: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン州"
- SHL-HLS_constituent_autonomous_province_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン州"
- SHL-HLS_constituent_autonomous_province_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_trust_territory: "$OVERLORDADJ$信託統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_trust_territory_DEF: "$OVERLORDADJ$信託統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_trust_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_A: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_A_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_B: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_B_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_C: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_mandated_territory_C_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_leased_territory: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_leased_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_leased_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
+ SHLandHLS_colony: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地"
+ SHLandHLS_colony_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地"
+ SHLandHLS_colony_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_colonies_federation: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン連邦植民地"
+ SHLandHLS_colonies_federation_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン連邦植民地"
+ SHLandHLS_colonies_federation_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_colony_and_protected_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地及び保護領"
+ SHLandHLS_colony_and_protected_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン植民地及び保護領"
+ SHLandHLS_colony_and_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_condominium: "共同統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_condominium_DEF: "共同統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_condominium_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_overseas_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_overseas_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_overseas_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_viceroyalty: "シュレースヴィヒ及びホルシュタイン副王領"
+ SHLandHLS_viceroyalty_DEF: "シュレースヴィヒ及びホルシュタイン副王領"
+ SHLandHLS_viceroyalty_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_captaincy_general: "シュレースヴィヒ及びホルシュタイン総督領"
+ SHLandHLS_captaincy_general_DEF: "シュレースヴィヒ及びホルシュタイン総督領"
+ SHLandHLS_captaincy_general_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_protected_territory: "$OVERLORDADJ$保護領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_protected_territory_DEF: "$OVERLORDADJ$保護領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_protected_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_constituent_autonomous_province: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン州"
+ SHLandHLS_constituent_autonomous_province_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン州"
+ SHLandHLS_constituent_autonomous_province_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_trust_territory: "$OVERLORDADJ$信託統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_trust_territory_DEF: "$OVERLORDADJ$信託統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_trust_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_mandated_territory_A: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_A_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_mandated_territory_B: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_B_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_mandated_territory_C: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_mandated_territory_C_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_leased_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_leased_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_leased_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_colony: "$OVERLORDADJ$領ゴールド・コースト北部地域植民地"
@@ -28368,48 +28368,48 @@
  COOKISLANDS_federation_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領クック諸島連邦"
  COOKISLANDS_federation_mandated_territory_A_ADJ: "$OVERLORD$領クック諸島"
  
- KIR-TVL_colony: "$OVERLORDADJ$領キリバス＝ツバル植民地"
- KIR-TVL_colony_DEF: "$OVERLORDADJ$領キリバス＝ツバル植民地"
- KIR-TVL_colony_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_colonies_federation: "$OVERLORDADJ$領キリバス＝ツバル連邦植民地"
- KIR-TVL_colonies_federation_DEF: "$OVERLORDADJ$領キリバス＝ツバル連邦植民地"
- KIR-TVL_colonies_federation_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_colony_and_protected_territory: "$OVERLORDADJ$領キリバス＝ツバル植民地及び保護領"
- KIR-TVL_colony_and_protected_territory_DEF: "$OVERLORDADJ$領キリバス＝ツバル植民地及び保護領"
- KIR-TVL_colony_and_protected_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_condominium: "共同統治領キリバス＝ツバル"
- KIR-TVL_condominium_DEF: "共同統治領キリバス＝ツバル"
- KIR-TVL_condominium_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_overseas_territory: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_overseas_territory_DEF: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_overseas_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_viceroyalty: "キリバス＝ツバル副王領"
- KIR-TVL_viceroyalty_DEF: "キリバス＝ツバル副王領"
- KIR-TVL_viceroyalty_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_captaincy_general: "キリバス＝ツバル総督領"
- KIR-TVL_captaincy_general_DEF: "キリバス＝ツバル総督領"
- KIR-TVL_captaincy_general_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_protected_territory: "$OVERLORDADJ$保護領キリバス＝ツバル"
- KIR-TVL_protected_territory_DEF: "$OVERLORDADJ$保護領キリバス＝ツバル"
- KIR-TVL_protected_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_constituent_autonomous_province: "$OVERLORDADJ$領キリバス＝ツバル州"
- KIR-TVL_constituent_autonomous_province_DEF: "$OVERLORDADJ$領キリバス＝ツバル州"
- KIR-TVL_constituent_autonomous_province_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_trust_territory: "$OVERLORDADJ$信託統治領キリバス＝ツバル"
- KIR-TVL_trust_territory_DEF: "$OVERLORDADJ$信託統治領キリバス＝ツバル"
- KIR-TVL_trust_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_mandated_territory_A: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_A_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_mandated_territory_B: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_B_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_mandated_territory_C: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領キリバス＝ツバル"
- KIR-TVL_mandated_territory_C_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_leased_territory: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_leased_territory_DEF: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_leased_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
+ KIRandTVL_colony: "$OVERLORDADJ$領キリバス及びツバル植民地"
+ KIRandTVL_colony_DEF: "$OVERLORDADJ$領キリバス及びツバル植民地"
+ KIRandTVL_colony_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_colonies_federation: "$OVERLORDADJ$領キリバス及びツバル連邦植民地"
+ KIRandTVL_colonies_federation_DEF: "$OVERLORDADJ$領キリバス及びツバル連邦植民地"
+ KIRandTVL_colonies_federation_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_colony_and_protected_territory: "$OVERLORDADJ$領キリバス及びツバル植民地及び保護領"
+ KIRandTVL_colony_and_protected_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル植民地及び保護領"
+ KIRandTVL_colony_and_protected_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_condominium: "共同統治領キリバス及びツバル"
+ KIRandTVL_condominium_DEF: "共同統治領キリバス及びツバル"
+ KIRandTVL_condominium_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_overseas_territory: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_overseas_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_overseas_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_viceroyalty: "キリバス及びツバル副王領"
+ KIRandTVL_viceroyalty_DEF: "キリバス及びツバル副王領"
+ KIRandTVL_viceroyalty_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_captaincy_general: "キリバス及びツバル総督領"
+ KIRandTVL_captaincy_general_DEF: "キリバス及びツバル総督領"
+ KIRandTVL_captaincy_general_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_protected_territory: "$OVERLORDADJ$保護領キリバス及びツバル"
+ KIRandTVL_protected_territory_DEF: "$OVERLORDADJ$保護領キリバス及びツバル"
+ KIRandTVL_protected_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_constituent_autonomous_province: "$OVERLORDADJ$領キリバス及びツバル州"
+ KIRandTVL_constituent_autonomous_province_DEF: "$OVERLORDADJ$領キリバス及びツバル州"
+ KIRandTVL_constituent_autonomous_province_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_trust_territory: "$OVERLORDADJ$信託統治領キリバス及びツバル"
+ KIRandTVL_trust_territory_DEF: "$OVERLORDADJ$信託統治領キリバス及びツバル"
+ KIRandTVL_trust_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_mandated_territory_A: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_A_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_A_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_mandated_territory_B: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_B_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_B_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_mandated_territory_C: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_C_DEF: "$OVERLORDADJ$委任統治領キリバス及びツバル"
+ KIRandTVL_mandated_territory_C_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_leased_territory: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_leased_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_leased_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
  
  RAROTONGA_kingdom_colony: "$OVERLORDADJ$領ラロトンガ王国"
  RAROTONGA_kingdom_colony_DEF: "$OVERLORDADJ$領ラロトンガ王国"
