--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_CHI_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_CHI_l_japanese.yml
@@ -4561,12 +4561,12 @@
  ZHELTUGA_CHI_autonomous_province_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION_CHI_autonomous_military_clique: "エーゲ＝イオニア諸島軍閥"
- AEG-ION_CHI_autonomous_military_clique_DEF: "エーゲ＝イオニア諸島軍閥"
- AEG-ION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_CHI_autonomous_province: "エーゲ＝イオニア諸島省"
- AEG-ION_CHI_autonomous_province_DEF: "エーゲ＝イオニア諸島省"
- AEG-ION_CHI_autonomous_province_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
+ AEGandION_CHI_autonomous_military_clique: "エーゲ及びイオニア諸島軍閥"
+ AEGandION_CHI_autonomous_military_clique_DEF: "エーゲ及びイオニア諸島軍閥"
+ AEGandION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_CHI_autonomous_province: "エーゲ及びイオニア諸島省"
+ AEGandION_CHI_autonomous_province_DEF: "エーゲ及びイオニア諸島省"
+ AEGandION_CHI_autonomous_province_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
  
  BYELORUSSIA_CHI_autonomous_military_clique: "ベロロシア軍閥"
  BYELORUSSIA_CHI_autonomous_military_clique_DEF: "ベロロシア軍閥"
@@ -4582,12 +4582,12 @@
  KAR-FIN_CHI_autonomous_province_DEF: "カレロ＝フィン省"
  KAR-FIN_CHI_autonomous_province_ADJ: "$OVERLORD$領カレロ＝フィン"
  
- SHL-HLS_CHI_autonomous_military_clique: "シュレースヴィヒ＝ホルシュタイン軍閥"
- SHL-HLS_CHI_autonomous_military_clique_DEF: "シュレースヴィヒ＝ホルシュタイン軍閥"
- SHL-HLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_CHI_autonomous_province: "シュレースヴィヒ＝ホルシュタイン省"
- SHL-HLS_CHI_autonomous_province_DEF: "シュレースヴィヒ＝ホルシュタイン省"
- SHL-HLS_CHI_autonomous_province_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
+ SHLandHLS_CHI_autonomous_military_clique: "シュレースヴィヒ及びホルシュタイン軍閥"
+ SHLandHLS_CHI_autonomous_military_clique_DEF: "シュレースヴィヒ及びホルシュタイン軍閥"
+ SHLandHLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_CHI_autonomous_province: "シュレースヴィヒ及びホルシュタイン省"
+ SHLandHLS_CHI_autonomous_province_DEF: "シュレースヴィヒ及びホルシュタイン省"
+ SHLandHLS_CHI_autonomous_province_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_CHI_autonomous_military_clique: "ゴールド・コースト北部地域軍閥"
@@ -4614,12 +4614,12 @@
  
 #大洋州
  
- KIR-TVL_CHI_autonomous_military_clique: "キリバス＝ツバル軍閥"
- KIR-TVL_CHI_autonomous_military_clique_DEF: "キリバス＝ツバル軍閥"
- KIR-TVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_CHI_autonomous_province: "キリバス＝ツバル省"
- KIR-TVL_CHI_autonomous_province_DEF: "キリバス＝ツバル省"
- KIR-TVL_CHI_autonomous_province_ADJ: "$OVERLORD$領キリバス＝ツバル"
+ KIRandTVL_CHI_autonomous_military_clique: "キリバス及びツバル軍閥"
+ KIRandTVL_CHI_autonomous_military_clique_DEF: "キリバス及びツバル軍閥"
+ KIRandTVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_CHI_autonomous_province: "キリバス及びツバル省"
+ KIRandTVL_CHI_autonomous_province_DEF: "キリバス及びツバル省"
+ KIRandTVL_CHI_autonomous_province_ADJ: "$OVERLORD$領キリバス・ツバル"
  
  
 #アメリカ諸州
