--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
@@ -10375,21 +10375,21 @@
  ZHELTUGA_reichsland_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION_reichsprotectorate: "エーゲ＝イオニア諸島保護領"
- AEG-ION_reichsprotectorate_DEF: "エーゲ＝イオニア諸島保護領"
- AEG-ION_reichsprotectorate_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_reichsgeneralgovernorate: "エーゲ＝イオニア諸島総督府領"
- AEG-ION_reichsgeneralgovernorate_DEF: "エーゲ＝イオニア諸島総督府領"
- AEG-ION_reichsgeneralgovernorate_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_reichskommissariat: "エーゲ＝イオニア諸島国家弁務官区"
- AEG-ION_reichskommissariat_DEF: "エーゲ＝イオニア諸島国家弁務官区"
- AEG-ION_reichskommissariat_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_reichskolonie: "エーゲ＝イオニア諸島国家植民地"
- AEG-ION_reichskolonie_DEF: "エーゲ＝イオニア諸島国家植民地"
- AEG-ION_reichskolonie_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_reichsland: "エーゲ＝イオニア諸島国家直轄地"
- AEG-ION_reichsland_DEF: "エーゲ＝イオニア諸島国家直轄地"
- AEG-ION_reichsland_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
+ AEGandION_reichsprotectorate: "エーゲ及びイオニア諸島保護領"
+ AEGandION_reichsprotectorate_DEF: "エーゲ及びイオニア諸島保護領"
+ AEGandION_reichsprotectorate_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_reichsgeneralgovernorate: "エーゲ及びイオニア諸島総督府領"
+ AEGandION_reichsgeneralgovernorate_DEF: "エーゲ及びイオニア諸島総督府領"
+ AEGandION_reichsgeneralgovernorate_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_reichskommissariat: "エーゲ及びイオニア諸島国家弁務官区"
+ AEGandION_reichskommissariat_DEF: "エーゲ及びイオニア諸島国家弁務官区"
+ AEGandION_reichskommissariat_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_reichskolonie: "エーゲ及びイオニア諸島国家植民地"
+ AEGandION_reichskolonie_DEF: "エーゲ及びイオニア諸島国家植民地"
+ AEGandION_reichskolonie_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_reichsland: "エーゲ及びイオニア諸島国家直轄地"
+ AEGandION_reichsland_DEF: "エーゲ及びイオニア諸島国家直轄地"
+ AEGandION_reichsland_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
  
  BYELORUSSIA_reichsprotectorate: "ベロロシア保護領"
  BYELORUSSIA_reichsprotectorate_DEF: "ベロロシア保護領"
@@ -10423,21 +10423,21 @@
  KAR-FIN_reichsland_DEF: "カレロ＝フィン国家直轄地"
  KAR-FIN_reichsland_ADJ: "$OVERLORD$領カレロ＝フィン"
  
- SHL-HLS_reichsprotectorate: "シュレースヴィヒ＝ホルシュタイン保護領"
- SHL-HLS_reichsprotectorate_DEF: "シュレースヴィヒ＝ホルシュタイン保護領"
- SHL-HLS_reichsprotectorate_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_reichsgeneralgovernorate: "シュレースヴィヒ＝ホルシュタイン総督府領"
- SHL-HLS_reichsgeneralgovernorate_DEF: "シュレースヴィヒ＝ホルシュタイン総督府領"
- SHL-HLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_reichskommissariat: "シュレースヴィヒ＝ホルシュタイン国家弁務官区"
- SHL-HLS_reichskommissariat_DEF: "シュレースヴィヒ＝ホルシュタイン国家弁務官区"
- SHL-HLS_reichskommissariat_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_reichskolonie: "シュレースヴィヒ＝ホルシュタイン国家植民地"
- SHL-HLS_reichskolonie_DEF: "シュレースヴィヒ＝ホルシュタイン国家植民地"
- SHL-HLS_reichskolonie_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_reichsland: "シュレースヴィヒ＝ホルシュタイン国家直轄地"
- SHL-HLS_reichsland_DEF: "シュレースヴィヒ＝ホルシュタイン国家直轄地"
- SHL-HLS_reichsland_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
+ SHLandHLS_reichsprotectorate: "シュレースヴィヒ及びホルシュタイン保護領"
+ SHLandHLS_reichsprotectorate_DEF: "シュレースヴィヒ及びホルシュタイン保護領"
+ SHLandHLS_reichsprotectorate_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_reichsgeneralgovernorate: "シュレースヴィヒ及びホルシュタイン総督府領"
+ SHLandHLS_reichsgeneralgovernorate_DEF: "シュレースヴィヒ及びホルシュタイン総督府領"
+ SHLandHLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_reichskommissariat: "シュレースヴィヒ及びホルシュタイン国家弁務官区"
+ SHLandHLS_reichskommissariat_DEF: "シュレースヴィヒ及びホルシュタイン国家弁務官区"
+ SHLandHLS_reichskommissariat_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_reichskolonie: "シュレースヴィヒ及びホルシュタイン国家植民地"
+ SHLandHLS_reichskolonie_DEF: "シュレースヴィヒ及びホルシュタイン国家植民地"
+ SHLandHLS_reichskolonie_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_reichsland: "シュレースヴィヒ及びホルシュタイン国家直轄地"
+ SHLandHLS_reichsland_DEF: "シュレースヴィヒ及びホルシュタイン国家直轄地"
+ SHLandHLS_reichsland_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_reichsprotectorate: "ゴールド・コースト北部地域保護領"
@@ -10491,21 +10491,21 @@
  
 #大洋州
  
- KIR-TVL_reichsprotectorate: "キリバス＝ツバル保護領"
- KIR-TVL_reichsprotectorate_DEF: "キリバス＝ツバル保護領"
- KIR-TVL_reichsprotectorate_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_reichsgeneralgovernorate: "キリバス＝ツバル総督府領"
- KIR-TVL_reichsgeneralgovernorate_DEF: "キリバス＝ツバル総督府領"
- KIR-TVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_reichskommissariat: "キリバス＝ツバル国家弁務官区"
- KIR-TVL_reichskommissariat_DEF: "キリバス＝ツバル国家弁務官区"
- KIR-TVL_reichskommissariat_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_reichskolonie: "キリバス＝ツバル国家植民地"
- KIR-TVL_reichskolonie_DEF: "キリバス＝ツバル国家植民地"
- KIR-TVL_reichskolonie_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_reichsland: "キリバス＝ツバル国家直轄地"
- KIR-TVL_reichsland_DEF: "キリバス＝ツバル国家直轄地"
- KIR-TVL_reichsland_ADJ: "$OVERLORD$領キリバス＝ツバル"
+ KIRandTVL_reichsprotectorate: "キリバス及びツバル保護領"
+ KIRandTVL_reichsprotectorate_DEF: "キリバス及びツバル保護領"
+ KIRandTVL_reichsprotectorate_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_reichsgeneralgovernorate: "キリバス及びツバル総督府領"
+ KIRandTVL_reichsgeneralgovernorate_DEF: "キリバス及びツバル総督府領"
+ KIRandTVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_reichskommissariat: "キリバス及びツバル国家弁務官区"
+ KIRandTVL_reichskommissariat_DEF: "キリバス及びツバル国家弁務官区"
+ KIRandTVL_reichskommissariat_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_reichskolonie: "キリバス及びツバル国家植民地"
+ KIRandTVL_reichskolonie_DEF: "キリバス及びツバル国家植民地"
+ KIRandTVL_reichskolonie_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_reichsland: "キリバス及びツバル国家直轄地"
+ KIRandTVL_reichsland_DEF: "キリバス及びツバル国家直轄地"
+ KIRandTVL_reichsland_ADJ: "$OVERLORD$領キリバス・ツバル"
  
  
 #アメリカ諸州
