--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_JAP_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_JAP_l_japanese.yml
@@ -4606,12 +4606,12 @@
  ZHELTUGA_imperial_overseas_territory_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION_imperial_constituent_state: "$OVERLORDADJ$領エーゲ＝イオニア諸島国"
- AEG-ION_imperial_constituent_state_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島国"
- AEG-ION_imperial_constituent_state_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
- AEG-ION_imperial_overseas_territory: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_imperial_overseas_territory_DEF: "$OVERLORDADJ$領エーゲ＝イオニア諸島"
- AEG-ION_imperial_overseas_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
+ AEGandION_imperial_constituent_state: "$OVERLORDADJ$領エーゲ及びイオニア諸島国"
+ AEGandION_imperial_constituent_state_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島国"
+ AEGandION_imperial_constituent_state_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
+ AEGandION_imperial_overseas_territory: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_imperial_overseas_territory_DEF: "$OVERLORDADJ$領エーゲ及びイオニア諸島"
+ AEGandION_imperial_overseas_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
  
  BYELORUSSIA_imperial_constituent_state: "$OVERLORDADJ$領白露西亜国"
  BYELORUSSIA_imperial_constituent_state_DEF: "$OVERLORDADJ$領白露西亜国"
@@ -4627,12 +4627,12 @@
  KAR-FIN_imperial_overseas_territory_DEF: "$OVERLORDADJ$領カレロ＝フィン"
  KAR-FIN_imperial_overseas_territory_ADJ: "$OVERLORD$領カレロ＝フィン"
  
- SHL-HLS_imperial_constituent_state: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン国"
- SHL-HLS_imperial_constituent_state_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン国"
- SHL-HLS_imperial_constituent_state_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_imperial_overseas_territory: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_imperial_overseas_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ＝ホルシュタイン"
- SHL-HLS_imperial_overseas_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
+ SHLandHLS_imperial_constituent_state: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン国"
+ SHLandHLS_imperial_constituent_state_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン国"
+ SHLandHLS_imperial_constituent_state_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
+ SHLandHLS_imperial_overseas_territory: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_imperial_overseas_territory_DEF: "$OVERLORDADJ$領シュレースヴィヒ及びホルシュタイン"
+ SHLandHLS_imperial_overseas_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_imperial_constituent_state: "$OVERLORDADJ$領ゴールド・コースト北部地域国"
@@ -4662,12 +4662,12 @@
  COOKISLANDS_federation_imperial_constituent_state_DEF: "$OVERLORDADJ$領クック諸島連邦"
  COOKISLANDS_federation_imperial_constituent_state_ADJ: "$OVERLORD$領クック諸島"
  
- KIR-TVL_imperial_constituent_state: "$OVERLORDADJ$領キリバス＝ツバル国"
- KIR-TVL_imperial_constituent_state_DEF: "$OVERLORDADJ$領キリバス＝ツバル国"
- KIR-TVL_imperial_constituent_state_ADJ: "$OVERLORD$領キリバス＝ツバル"
- KIR-TVL_imperial_overseas_territory: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_imperial_overseas_territory_DEF: "$OVERLORDADJ$領キリバス＝ツバル"
- KIR-TVL_imperial_overseas_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
+ KIRandTVL_imperial_constituent_state: "$OVERLORDADJ$領キリバス及びツバル国"
+ KIRandTVL_imperial_constituent_state_DEF: "$OVERLORDADJ$領キリバス及びツバル国"
+ KIRandTVL_imperial_constituent_state_ADJ: "$OVERLORD$領キリバス・ツバル"
+ KIRandTVL_imperial_overseas_territory: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_imperial_overseas_territory_DEF: "$OVERLORDADJ$領キリバス及びツバル"
+ KIRandTVL_imperial_overseas_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
  
  RAROTONGA_kingdom_imperial_constituent_state: "$OVERLORDADJ$領ラロトンガ王国"
  RAROTONGA_kingdom_imperial_constituent_state_DEF: "$OVERLORDADJ$領ラロトンガ王国"
