--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
@@ -18610,33 +18610,33 @@
  ZHELTUGA_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "ゼルトゥガ・$OVERLORD$"
  
 #ヨーロッパ
- AEG-ION_SOV_constituent_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$共和国"
- AEG-ION_SOV_constituent_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$共和国"
- AEG-ION_SOV_constituent_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_SOV_constituent_federative_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$連邦共和国"
- AEG-ION_SOV_constituent_federative_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$連邦共和国"
- AEG-ION_SOV_constituent_federative_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_SOV_constituent_autonomous_republic: "エーゲ＝イオニア諸島自治$OVERLORDADJ$共和国"
- AEG-ION_SOV_constituent_autonomous_republic_DEF: "エーゲ＝イオニア諸島自治$OVERLORDADJ$共和国"
- AEG-ION_SOV_constituent_autonomous_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEG-ION_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEG-ION_progressive_socialism_SOV_constituent_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEG-ION_progressive_socialism_SOV_constituent_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEG-ION_progressive_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
+ AEGandION_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$共和国"
+ AEGandION_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$共和国"
+ AEGandION_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$連邦共和国"
+ AEGandION_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$連邦共和国"
+ AEGandION_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$共和国"
+ AEGandION_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$共和国"
+ AEGandION_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
+ AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
+ AEGandION_progressive_socialism_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
+ AEGandION_progressive_socialism_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
+ AEGandION_progressive_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
+ AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
  
  BYELORUSSIA_SOV_colony: "$OVERLORDADJ$領ベロロシア植民地"
  BYELORUSSIA_SOV_colony_DEF: "$OVERLORDADJ$領ベロロシア植民地"
@@ -18832,33 +18832,33 @@
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "カレロ＝フィン・$OVERLORD$"
  
- SHL-HLS_SOV_constituent_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$共和国"
- SHL-HLS_SOV_constituent_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$共和国"
- SHL-HLS_SOV_constituent_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_SOV_constituent_federative_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$連邦共和国"
- SHL-HLS_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$連邦共和国"
- SHL-HLS_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_SOV_constituent_autonomous_republic: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$共和国"
- SHL-HLS_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$共和国"
- SHL-HLS_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHL-HLS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
+ SHLandHLS_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$共和国"
+ SHLandHLS_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$共和国"
+ SHLandHLS_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$連邦共和国"
+ SHLandHLS_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$連邦共和国"
+ SHLandHLS_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$共和国"
+ SHLandHLS_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$共和国"
+ SHLandHLS_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
+ SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_SOV_constituent_republic: "ゴールド・コースト北部地域・$OVERLORDADJ$共和国"
@@ -18948,33 +18948,33 @@
  
 #大洋州
  
- KIR-TVL_SOV_constituent_republic: "キリバス＝ツバル・$OVERLORDADJ$共和国"
- KIR-TVL_SOV_constituent_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$共和国"
- KIR-TVL_SOV_constituent_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_SOV_constituent_federative_republic: "キリバス＝ツバル・$OVERLORDADJ$連邦共和国"
- KIR-TVL_SOV_constituent_federative_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$連邦共和国"
- KIR-TVL_SOV_constituent_federative_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_SOV_constituent_autonomous_republic: "キリバス＝ツバル自治$OVERLORDADJ$共和国"
- KIR-TVL_SOV_constituent_autonomous_republic_DEF: "キリバス＝ツバル自治$OVERLORDADJ$共和国"
- KIR-TVL_SOV_constituent_autonomous_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic: "キリバス＝ツバル・$OVERLORDADJ$社会主義共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$社会主義共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic: "キリバス＝ツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
- KIR-TVL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_republic: "キリバス＝ツバル・$OVERLORDADJ$社会主義共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$社会主義共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic: "キリバス＝ツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
- KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
+ KIRandTVL_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$共和国"
+ KIRandTVL_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$共和国"
+ KIRandTVL_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$連邦共和国"
+ KIRandTVL_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$連邦共和国"
+ KIRandTVL_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$共和国"
+ KIRandTVL_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$共和国"
+ KIRandTVL_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
+ KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
  
  
 #アメリカ諸州
