--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_USA_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_USA_l_japanese.yml
@@ -3849,34 +3849,34 @@
  
 ##バニラ:
 #アジア:
- IND_empire_USA_commonwealth: "インド帝国自治連邦区"
- IND_empire_USA_commonwealth_DEF: "インド帝国自治連邦区"
+ IND_empire_USA_commonwealth: "インド帝国"
+ IND_empire_USA_commonwealth_DEF: "インド帝国"
  
- SYR_republic_USA_commonwealth: "シリア共和国自治連邦区"
- SYR_republic_USA_commonwealth_DEF: "シリア共和国自治連邦区"
+ SYR_republic_USA_commonwealth: "シリア共和国"
+ SYR_republic_USA_commonwealth_DEF: "シリア共和国"
  
 #ヨーロッパ:
- GRE_kingdom_USA_commonwealth: "ギリシャ王国自治連邦区"
- GRE_kingdom_USA_commonwealth_DEF: "ギリシャ王国自治連邦区"
+ GRE_kingdom_USA_commonwealth: "ギリシャ王国"
+ GRE_kingdom_USA_commonwealth_DEF: "ギリシャ王国"
  
 #アフリカ:
 #新大陸:
 #大洋州:
- AST_commonwealth_USA_commonwealth: "オーストラリア連邦自治連邦区"
- AST_commonwealth_USA_commonwealth_DEF: "オーストラリア連邦自治連邦区"
+ AST_commonwealth_USA_commonwealth: "オーストラリア連邦"
+ AST_commonwealth_USA_commonwealth_DEF: "オーストラリア連邦"
  
- HAW_kingdom_USA_commonwealth: "ハワイ王国自治連邦区"
- HAW_kingdom_USA_commonwealth_DEF: "ハワイ王国自治連邦区"
+ HAW_kingdom_USA_commonwealth: "ハワイ王国"
+ HAW_kingdom_USA_commonwealth_DEF: "ハワイ王国"
  
 #アメリカ諸州:
 ##追加国家:
 #アジア:
 #ヨーロッパ:
- GUE_bailiwick_USA_commonwealth: "ガーンジー代官管轄区自治連邦区"
- GUE_bailiwick_USA_commonwealth_DEF: "ガーンジー代官管轄区自治連邦区"
+ GUE_bailiwick_USA_commonwealth: "ガーンジー代官管轄区"
+ GUE_bailiwick_USA_commonwealth_DEF: "ガーンジー代官管轄区"
  
- JER_bailiwick_USA_commonwealth: "ジャージー代官管轄区自治連邦区"
- JER_bailiwick_USA_commonwealth_DEF: "ジャージー代官管轄区自治連邦区"
+ JER_bailiwick_USA_commonwealth: "ジャージー代官管轄区"
+ JER_bailiwick_USA_commonwealth_DEF: "ジャージー代官管轄区"
  
 #アフリカ:
 #新大陸:
@@ -3896,11 +3896,11 @@
  TRANSCAUCS_USA_territory_DEF: "トランスコーカサス準州"
  TRANSCAUCS_USA_territory_ADJ: "$OVERLORD$領トランスコーカサス"
  
- TRANSJORDAN_emirate_USA_commonwealth: "トランスヨルダン首長国自治連邦区"
- TRANSJORDAN_emirate_USA_commonwealth_DEF: "トランスヨルダン首長国自治連邦区"
+ TRANSJORDAN_emirate_USA_commonwealth: "トランスヨルダン首長国"
+ TRANSJORDAN_emirate_USA_commonwealth_DEF: "トランスヨルダン首長国"
  
- TRANSJORDAN_hashemite_kingdom_USA_commonwealth: "トランスヨルダン・ハシミテ王国自治連邦区"
- TRANSJORDAN_hashemite_kingdom_USA_commonwealth_DEF: "トランスヨルダン・ハシミテ王国自治連邦区"
+ TRANSJORDAN_hashemite_kingdom_USA_commonwealth: "トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_USA_commonwealth_DEF: "トランスヨルダン・ハシミテ王国"
  
  UYGHURSTAN_USA_commonwealth: "ウイグルスタン自治連邦区"
  UYGHURSTAN_USA_commonwealth_DEF: "ウイグルスタン自治連邦区"
@@ -3933,11 +3933,11 @@
  ZHELTUGA_USA_territory_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
- AEG-ION_USA_commonwealth: "エーゲ＝イオニア諸島自治連邦区"
- AEG-ION_USA_commonwealth_DEF: "エーゲ＝イオニア諸島自治連邦区"
- AEG-ION_USA_territory: "エーゲ＝イオニア諸島準州"
- AEG-ION_USA_territory_DEF: "エーゲ＝イオニア諸島準州"
- AEG-ION_USA_territory_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
+ AEGandION_USA_commonwealth: "エーゲ及びイオニア諸島自治連邦区"
+ AEGandION_USA_commonwealth_DEF: "エーゲ及びイオニア諸島自治連邦区"
+ AEGandION_USA_territory: "エーゲ及びイオニア諸島準州"
+ AEGandION_USA_territory_DEF: "エーゲ及びイオニア諸島準州"
+ AEGandION_USA_territory_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
  
  BYELORUSSIA_USA_commonwealth: "ベロロシア自治連邦区"
  BYELORUSSIA_USA_commonwealth_DEF: "ベロロシア自治連邦区"
@@ -3951,11 +3951,11 @@
  KAR-FIN_USA_territory_DEF: "カレロ＝フィン準州"
  KAR-FIN_USA_territory_ADJ: "$OVERLORD$領カレロ＝フィン"
  
- SHL-HLS_USA_commonwealth: "シュレースヴィヒ＝ホルシュタイン自治連邦区"
- SHL-HLS_USA_commonwealth_DEF: "シュレースヴィヒ＝ホルシュタイン自治連邦区"
- SHL-HLS_USA_territory: "シュレースヴィヒ＝ホルシュタイン準州"
- SHL-HLS_USA_territory_DEF: "シュレースヴィヒ＝ホルシュタイン準州"
- SHL-HLS_USA_territory_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
+ SHLandHLS_USA_commonwealth: "シュレースヴィヒ及びホルシュタイン自治連邦区"
+ SHLandHLS_USA_commonwealth_DEF: "シュレースヴィヒ及びホルシュタイン自治連邦区"
+ SHLandHLS_USA_territory: "シュレースヴィヒ及びホルシュタイン準州"
+ SHLandHLS_USA_territory_DEF: "シュレースヴィヒ及びホルシュタイン準州"
+ SHLandHLS_USA_territory_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_USA_commonwealth: "ゴールド・コースト北部地域自治連邦区"
@@ -3978,17 +3978,17 @@
  SOUTHGREENLAND_USA_territory_ADJ: "$OVERLORD$領南グリーンランド"
  
 #大洋州
- COOKISLANDS_federation_USA_commonwealth: "クック諸島連邦自治連邦区"
- COOKISLANDS_federation_USA_commonwealth_DEF: "クック諸島連邦自治連邦区"
+ COOKISLANDS_federation_USA_commonwealth: "クック諸島連邦"
+ COOKISLANDS_federation_USA_commonwealth_DEF: "クック諸島連邦"
  
- KIR-TVL_USA_commonwealth: "キリバス＝ツバル自治連邦区"
- KIR-TVL_USA_commonwealth_DEF: "キリバス＝ツバル自治連邦区"
- KIR-TVL_USA_territory: "キリバス＝ツバル準州"
- KIR-TVL_USA_territory_DEF: "キリバス＝ツバル準州"
- KIR-TVL_USA_territory_ADJ: "$OVERLORD$領キリバス＝ツバル"
+ KIRandTVL_USA_commonwealth: "キリバス及びツバル自治連邦区"
+ KIRandTVL_USA_commonwealth_DEF: "キリバス及びツバル自治連邦区"
+ KIRandTVL_USA_territory: "キリバス及びツバル準州"
+ KIRandTVL_USA_territory_DEF: "キリバス及びツバル準州"
+ KIRandTVL_USA_territory_ADJ: "$OVERLORD$領キリバス・ツバル"
  
- RAROTONGA_kingdom_USA_commonwealth: "ラロトンガ王国自治連邦区"
- RAROTONGA_kingdom_USA_commonwealth_DEF: "ラロトンガ王国自治連邦区"
+ RAROTONGA_kingdom_USA_commonwealth: "ラロトンガ王国"
+ RAROTONGA_kingdom_USA_commonwealth_DEF: "ラロトンガ王国"
  
 #アメリカ諸州
 ##国家連合
